--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -195,24 +195,24 @@ $2$╩м├╡║ў╠┌д╟├╡д╣бве╧е├е╖ехдЄ═╤дддыбве╡е╒еге├епе╣╠┌бв░╡╜╠е╡е╒еге├епе╣╠┌бвд╚▓■╬╔д
 дтд╚д╬╩┬д╙д╬┴ъ┬╨┼кд╩╜ч╜°дЄ╩°д╡д╩дддтд╬дЄ\textbf{░┬─ъе╜б╝е╚}д╚╕╞д╓бг
 
 \subsection{е╥б╝е╫е╜б╝е╚бзе╟б╝е┐╣╜┬дд╦дшды╣т┬ое╜б╝е╚}
-┴к┬Єе╜б╝е╚д╧┴╟─╛д╦╝┬┴їд╣дыд╚$O(n^2)$д└дмбв║╟╛о═╫┴╟д╬╕б║ўд╦е╥б╝е╫дф╩┐╣╒2╩м╠┌дЄ═╤дддыд╚$O(n \log n)$д╚д╩дыбге╥б╝е╫е╜б╝е╚д╧бв╝┬║▌д╬д╚д│дэд╧е╥б╝е╫дЄ═╤ддд┐┴к┬Єе╜б╝е╚д╦▓сдод╩ддбг
+┴к┬Єе╜б╝е╚д╧┴╟─╛д╦╝┬┴їд╣дыд╚$O(n^2)$д└дмбв║╟╛о═╫┴╟д╬╕б║ўд╦е╥б╝е╫дф╩┐╣╒$2$╩м╠┌дЄ═╤дддыд╚$O(n \log n)$д╚д╩дыбге╥б╝е╫е╜б╝е╚д╧бв╝┬║▌д╬д╚д│дэд╧е╥б╝е╫дЄ═╤ддд┐┴к┬Єе╜б╝е╚д╦▓сдод╩ддбг
 
 \subsubsection{е╥б╝е╫}
-\textbf{е╥б╝е╫}д╧2╩м╠┌д╟двдъбвminе╥б╝е╫д╟д╧┐╞д╧2д─д╬╗╥дшдъ╛од╡д╩├═дЄ╗¤д─бгд│дьд╧╟█╬єдЄ═╤дддыд│д╚д╦дшдъ╕·╬идшдп╝┬╕╜д╟дндыбге╥б╝е╫д╬╣тд╡д╧╛яд╦$[ \lg n]$д╟двдыбг
+\textbf{е╥б╝е╫}д╧$2$╩м╠┌д╟двдъбвminе╥б╝е╫д╟д╧┐╞д╧$2$д─д╬╗╥дшдъ╛од╡д╩├═дЄ╗¤д─бгд│дьд╧╟█╬єдЄ═╤дддыд│д╚д╦дшдъ╕·╬идшдп╝┬╕╜д╟дндыбге╥б╝е╫д╬╣тд╡д╧╛яд╦$[ \lg n]$д╟двдыбг
 
 \subsubsection{е╥б╝е╫дЄ╣╜└од╣ды}
 е╥б╝е╫д╦═╫┴╟дЄ─╔▓├д╣дыд╚днд╧бв╟█╬єд╬╢їднд╬║╟╜щд╬═╫┴╟д╦╟█├╓д╣дыбгдтд╖д╜д╬├═дм┐╞дшдъ╛од╡д▒дьд╨┐╞д╚═╫┴╟дЄ╞■дь┬╪дидыбгд│дьд╧║╞╡в┼кд╦╣╘джбг
 
 \subsubsection{║╟╛о═╫┴╟дЄ╝шдъ╜╨д╣}
-║╟╛о═╫┴╟д╧║мд╟двдыдлдщ├▒д╦д╜дьдЄ╗▓╛╚д╣дьд╨╬╔ддбг╢їднд╧дтд├д╚дт▒ж├╝д╦двды═╫┴╟д╟╦фдсдыбгдтд╖д│дьдм2д─д╬╗╥дшдъ┬чднд▒дьд╨д╜дьд╚╞■дь┬╪дидыбгд│дьдт║╞╡в┼кд╦╣╘джбге╥б╝е╫е╜б╝е╚д╧\textbf{едеєе╫еьб╝е╣е╜б╝е╚}д╟двдъбве╜б╝е╚д╣ды═╫┴╟дЄ│╩╟╝д╣ды╟█╬є░╩│░д╦═╛╩мд╩есетеъдЄ╗╚дяд╩ддбг
+║╟╛о═╫┴╟д╧║мд╟двдыдлдщ├▒д╦д╜дьдЄ╗▓╛╚д╣дьд╨╬╔ддбг╢їднд╧дтд├д╚дт▒ж├╝д╦двды═╫┴╟д╟╦фдсдыбгдтд╖д│дьдм$2$д─д╬╗╥дшдъ┬чднд▒дьд╨д╜дьд╚╞■дь┬╪дидыбгд│дьдт║╞╡в┼кд╦╣╘джбге╥б╝е╫е╜б╝е╚д╧\textbf{едеєе╫еьб╝е╣е╜б╝е╚}д╟двдъбве╜б╝е╚д╣ды═╫┴╟дЄ│╩╟╝д╣ды╟█╬є░╩│░д╦═╛╩мд╩есетеъдЄ╗╚дяд╩ддбг
 
 \subsubsection{е╥б╝е╫д╬╣т┬од╩╣╜└о╦б}
 д╥д╚д─д║д─═╫┴╟дЄ▓├дидыд│д╚д╟е╥б╝е╫дЄ╣╜└од╣дыд╬д╟д╧д╩дпбвд╣д┘д╞д╬═╫┴╟дЄ╟█├╓д╖д╞длдще╥б╝е╫╞тдЄ└░═¤д╣дыд█дждм╕·╬идм╬╔ддбг╗╥дЄ╗¤д─дтд╬д└д▒└░╣ч└ндЄе┴езе├епд╣дьд╨дшдпбвдлд─д╜д╬д╚дн╠┌д╧│╡д═─удддлдщд╟двдыбгд│дьд╧д█д▄└■╖┴╗■┤╓д╟║╤дрбг
 
-е╥б╝е╫д╬$k$╚╓╠▄д╦╛од╡дд═╫┴╟дм$x$░╩╛хдлдЄ╚╜─ъд╖д┐ддд╚днбвд│дьдЄ$x$дшдъ╛од╡дддтд╬дм$k$╕─░╩╛хдлд╚╞╔д▀┬╪дидыбгд╜д╖д╞бв$x$дшдъ╛од╡дд└сдЄ╝бб╣д╚╦м╠фд╖бвд╜д╬┐ЇдЄ┐Їдидыбгд│дьдм$k$дЄ─╢дид┐дщ╜к╬╗д╣дыбг╦м╠фд╣ды└сд╬┐Їд╧┐╞д╚╗╥2д─д╟╣тб╣$3k$д╩д╬д╟д│дьд╧$O(k)$д╬евеые┤еъе║ерд╟двдыбг╞м╬╔ддбг
+е╥б╝е╫д╬$k$╚╓╠▄д╦╛од╡дд═╫┴╟дм$x$░╩╛хдлдЄ╚╜─ъд╖д┐ддд╚днбвд│дьдЄ$x$дшдъ╛од╡дддтд╬дм$k$╕─░╩╛хдлд╚╞╔д▀┬╪дидыбгд╜д╖д╞бв$x$дшдъ╛од╡дд└сдЄ╝бб╣д╚╦м╠фд╖бвд╜д╬┐ЇдЄ┐Їдидыбгд│дьдм$k$дЄ─╢дид┐дщ╜к╬╗д╣дыбг╦м╠фд╣ды└сд╬┐Їд╧┐╞д╚╗╥$2$д─д╟╣тб╣$3k$д╩д╬д╟д│дьд╧$O(k)$д╬евеые┤еъе║ерд╟двдыбг╞м╬╔ддбг
 
 \subsubsection{├р╝б┴▐╞■д╦дшдые╜б╝е╚}
-┴▐╞■е╜б╝е╚д╬дшджд╩╩¤╦бдЄ\textbf{├р╝б┴▐╞■}д╚╕╞д╓бгд│дьдте╟б╝е┐╣╜┬дд╦╩┐╣╒2╩м╠┌дЄ═╤дддыд╚$O(n \log n)$д╟║╤дрбг
+┴▐╞■е╜б╝е╚д╬дшджд╩╩¤╦бдЄ\textbf{├р╝б┴▐╞■}д╚╕╞д╓бгд│дьдте╟б╝е┐╣╜┬дд╦╩┐╣╒$2$╩м╠┌дЄ═╤дддыд╚$O(n \log n)$д╟║╤дрбг
 
 \subsection{е▄епд╬└▀╖╫╩│└я╡нбз╚Ї╣╘╡бд╬е┴е▒е├е╚дЄдпдьд╩дддл}
 д╚дъдвдид║╚Ї╣╘╡бд╬е┴е▒е├е╚д╬├═├╩д╧дтд╬д╣д┤дд╩г╗ид╩┤╢д╕д╦д╩д├д╞дыд│д╚д╧дядлд├д┐бг
@@ -224,7 +224,7 @@ $2$╩м├╡║ў╠┌д╟├╡д╣бве╧е├е╖ехдЄ═╤дддыбве╡е╒еге├епе╣╠┌бв░╡╜╠е╡е╒еге├епе╣╠┌бвд╚▓■╬╔д
 ╝┬┴їд╦д─ддд╞╜ёддд╞двдыд╬д╟д╡д╣дмд╦╜ёд▒дыдшджд╦д╖д╚дпд╚дшд╡д╜джбг
 
 \subsubsection{─╛┤╤бзепеде├епе╜б╝е╚д╬╩┐╢╤д╬╛ь╣ч}
-ещеєе└ерд╩2╩м├╡║ў╠┌д╟д╧$n$▓єд╬┴▐╞■д╬╕хд╬╩┐╢╤д╬╣тд╡д╧$2 \ln n$д╟двдыб╩╛┌╠└д╩д╖б╦бгд│дьд╧$1.386 \lg n$д╩д╬д╟д╜дьд█д╔╣тдпд╧д╩ддбгдцдид╦╖╫╗╗╬╠д╧$O(n \log n)$д╟двдыд╚дддидыбг
+ещеєе└ерд╩$2$╩м├╡║ў╠┌д╟д╧$n$▓єд╬┴▐╞■д╬╕хд╬╩┐╢╤д╬╣тд╡д╧$2 \ln n$д╟двдыб╩╛┌╠└д╩д╖б╦бгд│дьд╧$1.386 \lg n$д╩д╬д╟д╜дьд█д╔╣тдпд╧д╩ддбгдцдид╦╖╫╗╗╬╠д╧$O(n \log n)$д╟двдыд╚дддидыбг
 
 \subsubsection{ещеєе└ер▓╜евеые┤еъе║ер}
 ╖ш─ъ┼кд╩епеде├епе╜б╝е╚д╬евеые┤еъе║ерд╟д╧╔мд║║╟░нд╬╞■╬╧╬удм┬╕║▀д╣дыбгд╜д│д╟бв╞■╬╧дЄ═╜дс\textbf{ещеєе└ер▓╜}д╖д╞дкдпд│д╚д╟╖╫╗╗╬╠д╬┤№┬╘├═дЄ$\Theta (n \log n)$д╚д╟дндыбгещеєе└ер▓╜д╧е╡еєе╫еъеєе░дфе╧е├е╖еєе░бв├╡║ўд╩д╔д╟дт═╤дддщдьдыбг
@@ -241,16 +241,16 @@ $2$╩м├╡║ў╠┌д╟├╡д╣бве╧е├е╖ехдЄ═╤дддыбве╡е╒еге├епе╣╠┌бв░╡╜╠е╡е╒еге├епе╣╠┌бвд╚▓■╬╔д
 \subsection{е▄епд╬└▀╖╫╩│└я╡нбзе╣енб╝е╩д╬╣│╩█}
 ╚є╛яд╦┬чднд╩е╟б╝е┐дЄе╜б╝е╚д╣дыд╚днд╧дддэдддэ╧├дм░удждшд═д╚дддж╧├бг
 
-\subsection{2╩м├╡║ўд╚┤╪╧вевеые┤еъе║ер}
+\subsection{$2$╩м├╡║ўд╚┤╪╧вевеые┤еъе║ер}
 
 \subsubsection{╜╨╕╜д╬┐Їди╛хд▓}
-е╜б╝е╚д╡дьд┐╟█╬є├цд╟═╫┴╟$k$д╬╜╨╕╜▓є┐ЇдЄ╡сдсды╛ь╣чбв2╩м├╡║ўдЄ▓■┬дд╖д╞┬╛д╬═╫┴╟д╚д╬╢н│ждЄ╡сдсдыдшджд╦д╣дыд╚╣т┬од╦╡сд▐дыбг
+е╜б╝е╚д╡дьд┐╟█╬є├цд╟═╫┴╟$k$д╬╜╨╕╜▓є┐ЇдЄ╡сдсды╛ь╣чбв$2$╩м├╡║ўдЄ▓■┬дд╖д╞┬╛д╬═╫┴╟д╚д╬╢н│ждЄ╡сдсдыдшджд╦д╣дыд╚╣т┬од╦╡сд▐дыбг
 
-\subsubsection{╩╥┬ж2╩м├╡║ў}
-╟█╬єд╬═╫┴╟┐Їд╬╛х╕┬дмдядлдщд╩ддд╚д╖д╞бв╟█╬є├цд╬═╫┴╟д╬┼╛┤╣┼└дЄ╡сдсд┐ддбгд╜д╬╛ь╣чд╧$A[1],A[2],A[4],A[8],...$д╚├╡║ўд╖д╞2╩м├╡║ўд╬┴ыдЄ╖ш─ъд╣дыд╚┴сддбг
+\subsubsection{╩╥┬ж$2$╩м├╡║ў}
+╟█╬єд╬═╫┴╟┐Їд╬╛х╕┬дмдядлдщд╩ддд╚д╖д╞бв╟█╬є├цд╬═╫┴╟д╬┼╛┤╣┼└дЄ╡сдсд┐ддбгд╜д╬╛ь╣чд╧$A[1],A[2],A[4],A[8],...$д╚├╡║ўд╖д╞$2$╩м├╡║ўд╬┴ыдЄ╖ш─ъд╣дыд╚┴сддбг
 
 \subsubsection{╩┐╩¤║мд╚д╜д╬┬╛д╬║м}
-2╩м├╡║ўд╟╩┐╩¤║мдф╩¤─°╝░д╬▓ЄдЄ╡сдсдщдьдыдшд═д╚дддж╧├бг
+$2$╩м├╡║ўд╟╩┐╩¤║мдф╩¤─°╝░д╬▓ЄдЄ╡сдсдщдьдыдшд═д╚дддж╧├бг
 
 \subsection{╩м│ф┼¤╝г╦б}
 ╩м│ф┼¤╝г╦бд╧бв╠ф┬ъдЄб╩д┐д╚дид╨б╦╚╛╩мд╦╩м│фд╖д╜дьд╛дьдЄ▓Єдпбг
@@ -262,5 +262,45 @@ Strassenд╧$n \times n$╣╘╬єд╬└╤дЄ$n/2 \times n/2$╣╘╬єд╬└╤7д─д╦╩м│фд╣дыд│д╚д╦дшдъб
 
 \subsubsection{╩м│ф┼¤╝г╦бд╬║╞╡в╝░дЄ▓Єдп}
 ╩м│ф┼¤╝г╦бд╬║╞╡в╝░$T(n)=aT(n/b)+f(n)$дЄ┤╩├▒д╦▓Єдп\textbf{е▐е╣е┐б╝─ъ═¤}д╬╛╥▓Ёбгд░д░д├д╞╗╚дидьд╨╬╔ддбгд│д│д╟д╧─╛┤╢┼кд╩▓Є╝сдт╝ид╡дьд╞дддыбг
+
+
+
+\section{е░еще╒▓г├╟}
+
+\subsection{е░еще╒д╬╞├─з}
+╝л╕╩еыб╝е╫дф┬┐╜┼╩╒дЄ╗¤д─е░еще╒дЄ\textbf{╚є├▒╜уе░еще╒}д╚ддджбг╚є╩─╧йд╩═н╕■е░еще╒дЄ\textbf{DAG(Directed Acyclic Graph)}д╚ддддбве╣е▒е╕ехб╝еъеєе░╠ф┬ъд╩д╔д╦╕╜дьдыбге╨е├епе╚еще├еп├╡║ўд╩д╔д╟д╧е░еще╒д╧\textbf{╠└╝и}┼кд╦д╧╝ид╡дьд╩ддбг
+
+\subsubsection{╕Є═зе░еще╒}
+е╜б╝е╖еуеые═е├е╚еяб╝епдЄ┬ъ║рд╦е░еще╒д╬═╤╕ьд╬╝┬═╤╬удЄ╡єд▓дыбг┐╖д╖дп┼╨╛ьд╣ды═╤╕ьд╧е░еще╒д╬\textbf{╝б┐Ї}д╟бвд╜дьд╧─║┼└д╦└▄┬│д╣ды╩╒д╬╦▄┐ЇдЄ░╒╠гд╣дыбгд╣д┘д╞д╬─║┼└д╟╝б┐Їдм┼∙д╖дде░еще╒дЄ\textbf{└╡┬зе░еще╒}д╚ддджбг
+
+\subsection{е░еще╒д╬е╟б╝е┐╣╜┬д}
+е░еще╒д╧╬┘└▄╣╘╬єдл╬┘└▄еъе╣е╚д╟╔╜д╡дьдыдмбв┬ч│╡д╧╬┘└▄еъе╣е╚д╬д█дждм╬╔ддбгC╕└╕ьд╦дшды╝┬┴їдм╝ид╡дьд╞дддыбг╝┬║▌д╦д╧ \it{LEDA} дф \it{Boost} д╩д╔д╬ещеде╓ещеъдЄ═╤дддыд╚╬╔ддбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзе▄епд╧ерб╝евд╬╦б┬зд╬╡╛└╖╝╘д└д├д┐}
+е╧б╝е╔ежезевд╬└н╟╜╕■╛хдЄ╕л▒█д╖д┐евеые┤еъе║ердЄ└▀╖╫д╣дыд╚╬╔дддшд═д╚дддж╧├бг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзе░еще╒дЄ╝ъд╦╞■дьды}
+╗░│╤╖┴д╬╜╕╣чдлдщ\textbf{┴╨┬╨е░еще╒}дЄ║юдыд╬д╦$O(n^2)$д╬╗■┤╓дЄдлд▒д╞ддд┐д╬дЄбв▓■╬╔д╦дшдъ└■╖┴╗■┤╓д╦д╖д┐╧├бгд│д╬╛ь╣чд╬┴╨┬╨е░еще╒д╚д╧бв│╞╗░│╤╖┴д╦┬╨д╖─║┼└дЄд╥д╚д─└▀─ъд╖бв╬┘└▄д╣ды╗░│╤╖┴д╬─║┼└╞▒╗╬дЄ╖ыдєд└дтд╬дЄддджбге╟б╝е┐д╬╜щ┤№▓╜дт└■╖┴д╟д╩д▒дьд╨д╩дщд╩ддбвд╚ддджд│д╚дм═╫┼└д╟двдыбг
+
+\subsection{е░еще╒д╬▓г├╟}
+е░еще╒д╬\textbf{▓г├╟}д╚д╧бвд╣д┘д╞д╬─║┼└дЄб╓╠д╚п╕лвк╚п╕л║╤д▀вк╜ш═¤║╤д▀б╫д╚┴л░▄д╡д╗ды╜ш═¤д╟двдыбг
+
+\subsection{╔¤═е└ш├╡║ў}
+енехб╝дЄ═╤ддд╞╝┬┴їд╣дыбг
+
+\subsubsection{▓г├╟дЄ│ш═╤д╣ды}
+├╡║ўд╣ды┤╪┐Їд╚─║┼└дф╩╒дЄ╜Ї═¤д╣ды┤╪┐Їд╧╩мд▒д╞дкдпд╚╩╪═°бг
+
+\subsubsection{╖╨╧йд╬╚п╕л}
+├╡║ўд╬┼╙├цд╟│╞─║┼└д╬┐╞дЄ╡н╧┐д╖д╞дкд▒д╨д╜дьдЄ├йдыд│д╚д╟║╟├╗╖╨╧йдЄ╕лд─д▒дыд│д╚дмд╟дндыбг
+
+\subsection{╔¤═е└ш├╡║ўд╬▒■═╤}
+
+\subsubsection{╧в╖ы└о╩м}
+е░еще╒дм\textbf{╧в╖ы}д╟двдыд╚д╧бв╟д░╒д╬$2$д─д╬─║┼└д╬┤╓д╦╖╨╧йдм┬╕║▀д╣дыд│д╚бг\textbf{╧в╖ы└о╩м}д╚д╧е░еще╒д╬╧в╖ыд╖д╞ддды╔Ї╩мд╬джд┴╢╦┬чд╬дтд╬бг╢├дпд█д╔д┐дпд╡дєд╬╠ф┬ъдм╧в╖ы└о╩мдЄ╕лд─д▒д┐дъ┐Їдид┐дъд╣ды╠ф┬ъд╦╡в├хд╣дыбгд│дьд╧╔¤═е└ш├╡║ўдЄ╩г┐Ї▓є┴Ўдщд╗дыд│д╚д╟╝┬╕╜д╟дндыбг
+
+\subsubsection{2║╠┐зе░еще╒}
+\textbf{$2$╔Їе░еще╒}д╧\textbf{$2$║╠┐з╠ф┬ъ}дЄ▓Єд▒д╨╕лд─д▒дщдьдыбг$2$║╠┐з╠ф┬ъд╧бв─║┼└дЄ╕лд─д▒дыд┐д╙д╦┐╞д╚╚┐┬╨д╬┐зд╟┼╔дъбв╩╒дЄ╕лд─д▒дыд┐д╙д╦д╜д╬└╡┼Ў└ндЄе┴езе├епд╣дыд│д╚д╦дшдъ▓Єдлдьдыбг
+
 
 \end{document}
