--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -302,5 +302,29 @@ Strassenд╧$n \times n$╣╘╬єд╬└╤дЄ$n/2 \times n/2$╣╘╬єд╬└╤7д─д╦╩м│фд╣дыд│д╚д╦дшдъб
 \subsubsection{2║╠┐зе░еще╒}
 \textbf{$2$╔Їе░еще╒}д╧\textbf{$2$║╠┐з╠ф┬ъ}дЄ▓Єд▒д╨╕лд─д▒дщдьдыбг$2$║╠┐з╠ф┬ъд╧бв─║┼└дЄ╕лд─д▒дыд┐д╙д╦┐╞д╚╚┐┬╨д╬┐зд╟┼╔дъбв╩╒дЄ╕лд─д▒дыд┐д╙д╦д╜д╬└╡┼Ў└ндЄе┴езе├епд╣дыд│д╚д╦дшдъ▓Єдлдьдыбг
 
+\subsection{┐╝д╡═е└ш├╡║ў}
+┐╝д╡═е└ш├╡║ўд╟─║┼└д╬╜╨╞■дъд╬╗■╣ядЄ╡н╧┐д╣дыд╚бвд╜дьдЄ═╤ддд╞└ш┴─┤╪╖╕д╬╚п╕лдф╗╥┬╣д╬┐Їд╬ележеєе╚дЄ╣╘джд│д╚дмд╟дндыбгд▐д┐бв┐╝д╡═е└ш├╡║ўд╧╠╡╕■е░еще╒д╬╩╒дЄ╠┌╩╒д╚╡╒╩╒д╦╩м╬рд╣дыбг
+
+\subsection{┐╝д╡═е└ш├╡║ўд╬▒■═╤}
+┐╝д╡═е└ш├╡║ўд╟д╧бв╞▒д╕╩╒дЄ2┼┘╠▄д╦╦мдьдыд╚днбвд╜д╬╩╒д╬└шд╧╔мд║─╛└▄д╬└ш┴─д╟двдыбж
+
+\subsubsection{╩─╧йдЄ╕лд─д▒ды}
+├╡║ў├цд╦╡╒╩╒дмдвдьд╨бвд╜дьд╧╩─╧йдЄ╣╜└од╣дыбг
+
+\subsubsection{┤╪└с┼└}
+║я╜№д╣дыд╚е░еще╒д╬╧в╖ы└о╩мдм╩м├╟д╡дьдыдшджд╩─║┼└дЄ┤╪└с┼└двдыддд╧└┌├╟┼└д╚ддджбг╧в╖ы┼┘д╚д╧д╜дьдЄ║я╜№д╣дыд╚е░еще╒дЄ╚є╧в╖ыд╦д╣дыдшджд╩─║┼└д╬╕─┐ЇдЄддджбг
+
+╠┌╩╒д╚╡╒╩╒дЄ═╤ддд╞┼■├г▓─╟╜д╩дтд├д╚дт┴сдд└ш┴─дЄ╩▌┬╕д╣дыд╚бвд│дьдЄ═╤ддд╞┤╪└с┼└д╬╚╜─ъдмд╟дндыбг╝л╩м╝л┐╚д▐д╟д╖дл┼■├гд╟днд╩ддд╚днд╜д╬┐╞д╧┤╪└с┼└бг┐╞д▐д╟д╖дл┼■├гд╟днд╩ддд╚днд╜д╬┐╞д╧┤╪└с┼└бг
+
+1╦▄д╬╩╒дЄ║я╜№д╣дыд╚е░еще╒дм╚є╧в╖ыд╦д╩дыд╚днбвд╜д╬╩╒д╧е╓еъе├е╕д╚╕╞д╨дьдыбгд│д╬╚╜─ъд╧бвд╜д╬╩╒дм╠┌╩╒д╟двдъбвдлд─д╔д╬╡╒╩╒дтд╜д╬╛х▓╝дЄ╖ыд╨д╩ддд│д╚дЄ│╬╟зд╣дыд│д╚д╟╣╘дидыбг
+
+\subsection{═н╕■е░еще╒д╟д╬┐╝д╡═е└ш├╡║ў}
+═н╕■е░еще╒д╟д╧бв╩╒д╧╠┌╩╒бв┴░┐╩╩╒бв╡╒╩╒бв╕Є║╣╩╒д╦╩м╬рд╡дьдыбг
+
+\subsubsection{░╠┴ъ┼ке╜б╝е╚}
+░╠┴ъ┼ке╜б╝е╚д╚д╧бвд╣д┘д╞д╬═н╕■╩╒дм║╕длдщ▒ждЄ╕■дпдшджд╦─║┼└дЄ░ь─╛└■д╦╩┬д┘дыд│д╚д╟двдыбг─║┼└дм╜ш═¤║╤д▀д╬еще┘еыдЄд─д▒дщдьд┐╜ч╜°дЄ╡╒д╦д╣дыд╚░╠┴ъ┼ке╜б╝е╚д╦д╩дыбг
+
+\subsubsection{╢п╧в╖ы└о╩м}
+е░еще╒дм╢п╧в╖ыд╟двдыд╚д╧бвд╔д╬2д─д╬─║┼└д╬┤╓д╦дт═н╕■╖╨╧йдмдвдыд│д╚д╟двдыбгдвды─║┼└длдще░еще╒дЄ▓г├╟д╖бвд╜д╖д╞╩╒д╬╩¤╕■дЄд╥д├дпдъ╩╓д╖д┐е░еще╒д╦д─ддд╞дт╞▒д╕дшджд╦▓г├╟д╖бвд╚дтд╦д╣д┘д╞д╬┼└д╦┼■├гд╟дндьд╨д╜д╬е░еще╒д╧╢п╧в╖ыд╟двдыбг╩─╧йдЄд╣д┘д╞░╡╜╠д╖д╞д╥д╚д─д╬┼└д╦д╣дыд│д╚д╦дшдъ╢п╧в╖ы└о╩мд╚д╜дьдЄд─д╩д░╩╒дм╞└дщдьдыбг
 
 \end{document}
