--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -303,7 +303,7 @@ Strassenд╧$n \times n$╣╘╬єд╬└╤дЄ$n/2 \times n/2$╣╘╬єд╬└╤7д─д╦╩м│фд╣дыд│д╚д╦дшдъб
 \textbf{$2$╔Їе░еще╒}д╧\textbf{$2$║╠┐з╠ф┬ъ}дЄ▓Єд▒д╨╕лд─д▒дщдьдыбг$2$║╠┐з╠ф┬ъд╧бв─║┼└дЄ╕лд─д▒дыд┐д╙д╦┐╞д╚╚┐┬╨д╬┐зд╟┼╔дъбв╩╒дЄ╕лд─д▒дыд┐д╙д╦д╜д╬└╡┼Ў└ндЄе┴езе├епд╣дыд│д╚д╦дшдъ▓Єдлдьдыбг
 
 \subsection{┐╝д╡═е└ш├╡║ў}
-┐╝д╡═е└ш├╡║ўд╟─║┼└д╬╜╨╞■дъд╬╗■╣ядЄ╡н╧┐д╣дыд╚бвд╜дьдЄ═╤ддд╞└ш┴─┤╪╖╕д╬╚п╕лдф╗╥┬╣д╬┐Їд╬ележеєе╚дЄ╣╘джд│д╚дмд╟дндыбгд▐д┐бв┐╝д╡═е└ш├╡║ўд╧╠╡╕■е░еще╒д╬╩╒дЄ╠┌╩╒д╚╡╒╩╒д╦╩м╬рд╣дыбг
+┐╝д╡═е└ш├╡║ўд╟─║┼└д╬╜╨╞■дъд╬╗■╣ядЄ╡н╧┐д╣дыд╚бвд╜дьдЄ═╤ддд╞└ш┴─┤╪╖╕д╬╚п╕лдф╗╥┬╣д╬┐Їд╬ележеєе╚дЄ╣╘джд│д╚дмд╟дндыбгд▐д┐бв┐╝д╡═е└ш├╡║ўд╧╠╡╕■е░еще╒д╬╩╒дЄ\textbf{╠┌╩╒}д╚\textbf{╡╒╩╒}д╦╩м╬рд╣дыбг
 
 \subsection{┐╝д╡═е└ш├╡║ўд╬▒■═╤}
 ┐╝д╡═е└ш├╡║ўд╟д╧бв╞▒д╕╩╒дЄ2┼┘╠▄д╦╦мдьдыд╚днбвд╜д╬╩╒д╬└шд╧╔мд║─╛└▄д╬└ш┴─д╟двдыбж
@@ -312,19 +312,77 @@ Strassenд╧$n \times n$╣╘╬єд╬└╤дЄ$n/2 \times n/2$╣╘╬єд╬└╤7д─д╦╩м│фд╣дыд│д╚д╦дшдъб
 ├╡║ў├цд╦╡╒╩╒дмдвдьд╨бвд╜дьд╧╩─╧йдЄ╣╜└од╣дыбг
 
 \subsubsection{┤╪└с┼└}
-║я╜№д╣дыд╚е░еще╒д╬╧в╖ы└о╩мдм╩м├╟д╡дьдыдшджд╩─║┼└дЄ┤╪└с┼└двдыддд╧└┌├╟┼└д╚ддджбг╧в╖ы┼┘д╚д╧д╜дьдЄ║я╜№д╣дыд╚е░еще╒дЄ╚є╧в╖ыд╦д╣дыдшджд╩─║┼└д╬╕─┐ЇдЄддджбг
+║я╜№д╣дыд╚е░еще╒д╬╧в╖ы└о╩мдм╩м├╟д╡дьдыдшджд╩─║┼└дЄ\textbf{┤╪└с┼└}двдыддд╧\textbf{└┌├╟┼└}д╚ддджбг\textbf{╧в╖ы┼┘}д╚д╧д╜дьдЄ║я╜№д╣дыд╚е░еще╒дЄ╚є╧в╖ыд╦д╣дыдшджд╩─║┼└д╬╕─┐ЇдЄддджбг
 
 ╠┌╩╒д╚╡╒╩╒дЄ═╤ддд╞┼■├г▓─╟╜д╩дтд├д╚дт┴сдд└ш┴─дЄ╩▌┬╕д╣дыд╚бвд│дьдЄ═╤ддд╞┤╪└с┼└д╬╚╜─ъдмд╟дндыбг╝л╩м╝л┐╚д▐д╟д╖дл┼■├гд╟днд╩ддд╚днд╜д╬┐╞д╧┤╪└с┼└бг┐╞д▐д╟д╖дл┼■├гд╟днд╩ддд╚днд╜д╬┐╞д╧┤╪└с┼└бг
 
-1╦▄д╬╩╒дЄ║я╜№д╣дыд╚е░еще╒дм╚є╧в╖ыд╦д╩дыд╚днбвд╜д╬╩╒д╧е╓еъе├е╕д╚╕╞д╨дьдыбгд│д╬╚╜─ъд╧бвд╜д╬╩╒дм╠┌╩╒д╟двдъбвдлд─д╔д╬╡╒╩╒дтд╜д╬╛х▓╝дЄ╖ыд╨д╩ддд│д╚дЄ│╬╟зд╣дыд│д╚д╟╣╘дидыбг
+1╦▄д╬╩╒дЄ║я╜№д╣дыд╚е░еще╒дм╚є╧в╖ыд╦д╩дыд╚днбвд╜д╬╩╒д╧\textbf{е╓еъе├е╕}д╚╕╞д╨дьдыбгд│д╬╚╜─ъд╧бвд╜д╬╩╒дм╠┌╩╒д╟двдъбвдлд─д╔д╬╡╒╩╒дтд╜д╬╛х▓╝дЄ╖ыд╨д╩ддд│д╚дЄ│╬╟зд╣дыд│д╚д╟╣╘дидыбг
 
 \subsection{═н╕■е░еще╒д╟д╬┐╝д╡═е└ш├╡║ў}
-═н╕■е░еще╒д╟д╧бв╩╒д╧╠┌╩╒бв┴░┐╩╩╒бв╡╒╩╒бв╕Є║╣╩╒д╦╩м╬рд╡дьдыбг
+═н╕■е░еще╒д╟д╧бв╩╒д╧\textbf{╠┌╩╒}бв\textbf{┴░┐╩╩╒}бв\textbf{╡╒╩╒}бв\textbf{╕Є║╣╩╒}д╦╩м╬рд╡дьдыбг
 
 \subsubsection{░╠┴ъ┼ке╜б╝е╚}
-░╠┴ъ┼ке╜б╝е╚д╚д╧бвд╣д┘д╞д╬═н╕■╩╒дм║╕длдщ▒ждЄ╕■дпдшджд╦─║┼└дЄ░ь─╛└■д╦╩┬д┘дыд│д╚д╟двдыбг─║┼└дм╜ш═¤║╤д▀д╬еще┘еыдЄд─д▒дщдьд┐╜ч╜°дЄ╡╒д╦д╣дыд╚░╠┴ъ┼ке╜б╝е╚д╦д╩дыбг
+\textbf{░╠┴ъ┼ке╜б╝е╚}д╚д╧бвд╣д┘д╞д╬═н╕■╩╒дм║╕длдщ▒ждЄ╕■дпдшджд╦─║┼└дЄ░ь─╛└■д╦╩┬д┘дыд│д╚д╟двдыбг─║┼└дм╜ш═¤║╤д▀д╬еще┘еыдЄд─д▒дщдьд┐╜ч╜°дЄ╡╒д╦д╣дыд╚░╠┴ъ┼ке╜б╝е╚д╦д╩дыбг
 
 \subsubsection{╢п╧в╖ы└о╩м}
-е░еще╒дм╢п╧в╖ыд╟двдыд╚д╧бвд╔д╬2д─д╬─║┼└д╬┤╓д╦дт═н╕■╖╨╧йдмдвдыд│д╚д╟двдыбгдвды─║┼└длдще░еще╒дЄ▓г├╟д╖бвд╜д╖д╞╩╒д╬╩¤╕■дЄд╥д├дпдъ╩╓д╖д┐е░еще╒д╦д─ддд╞дт╞▒д╕дшджд╦▓г├╟д╖бвд╚дтд╦д╣д┘д╞д╬┼└д╦┼■├гд╟дндьд╨д╜д╬е░еще╒д╧╢п╧в╖ыд╟двдыбг╩─╧йдЄд╣д┘д╞░╡╜╠д╖д╞д╥д╚д─д╬┼└д╦д╣дыд│д╚д╦дшдъ╢п╧в╖ы└о╩мд╚д╜дьдЄд─д╩д░╩╒дм╞└дщдьдыбг
+е░еще╒дм\textbf{╢п╧в╖ы}д╟двдыд╚д╧бвд╔д╬2д─д╬─║┼└д╬┤╓д╦дт═н╕■╖╨╧йдмдвдыд│д╚д╟двдыбгдвды─║┼└длдще░еще╒дЄ▓г├╟д╖бвд╜д╖д╞╩╒д╬╩¤╕■дЄд╥д├дпдъ╩╓д╖д┐е░еще╒д╦д─ддд╞дт╞▒д╕дшджд╦▓г├╟д╖бвд╚дтд╦д╣д┘д╞д╬┼└д╦┼■├гд╟дндьд╨д╜д╬е░еще╒д╧╢п╧в╖ыд╟двдыбг╩─╧йдЄд╣д┘д╞░╡╜╠д╖д╞д╥д╚д─д╬┼└д╦д╣дыд│д╚д╦дшдъ╢п╧в╖ы└о╩мд╚д╜дьдЄд─д╩д░╩╒дм╞└дщдьдыбг
+
+
+
+\section{╜┼д▀╔╒дне░еще╒д╬евеые┤еъе║ер}
+
+\subsection{║╟╛ое╣е╤е╦еєе░╠┌}
+\textbf{║╟╛ое╣е╤е╦еєе░╠┌}д╚д╧бве░еще╒д╬╩╒д╬╔Ї╩м╜╕╣чд╟─║┼└дЄд╣д┘д╞╧в╖ыд╣дыдтд╬д╬джд┴бв╜┼д▀дм║╟╛од╬дтд╬дЄддджбг
+
+\subsubsection{е╫еъерд╬евеые┤еъе║ер}
+\textbf{е╫еъерд╬евеые┤еъе║ер}д╟д╧бв╠┌д╬─║┼└д╬┐ЇдЄ┴¤д╣дшджд╩╩╒д╟╜┼д▀дм║╟╛од╬дтд╬дЄ╠┌д╦▓├ди┬│д▒дыбг╝┬┴їд╬╣й╔╫д╦дшдъ$O(nm)$длдщ$O(m+n \ln n)$д▐д╟╕║дщд╗дыдщд╖ддбг
+
+\subsubsection{епеще╣елеыд╬евеые┤еъе║ер}
+┴┬д╩е░еще╒д╟╕·╬идм╬╔ддбг╗─д├д╞ды╩╒д╟дтд├д╚дт╖┌дддтд╬дЄ╝шдъ╛хд▓бв╬╛├╝дм╞▒░ьд╬╧в╖ы└о╩мд╦╞■д├д╞д╩ддд▒дьд╨д╜д╬╩╒дЄ▓├дидыбг╧в╖ы└о╩мд╬┤╔═¤дЄ\textbf{union-field}д╟╣╘джд│д╚д╦дшдъ$O(m \log m)$д╟┴Ўдыбг
+
+\subsubsection{union-fieldе╟б╝е┐╣╜┬д}
+union-fieldе╟б╝е┐╣╜┬дд╧╟█╬єд╟╕·╬идшдп╔╜д╡дьдыбг╟█╬єд╬│╞═╫┴╟д╧┐╞д╬едеєе╟е├епе╣дЄ╗╪д╖бв╝л╩м╝л┐╚дм╗╪─ъд╡дьдыд╚днд╜дьдм║мд╟двдыд│д╚дЄ░╒╠гд╣дыбг
+
+\subsubsection{║╟╛ое╣е╤е╦еєе░╠┌д╬╩╤╝я}
+║╟┬че╣е╤е╦еєе░╠┌д╧├▒д╦д╣д┘д╞д╬╩╒д╦╔ф╣цдЄд─д▒дьд╨╞└дщдьдыбг║╟┬ч└╤е╣е╤е╦еєе░╠┌д╧╩╒д╬╜┼д▀дЄ┬╨┐Їд╚╝шдъ┬╪дидыд│д╚д╦дшдъ╞└дщдьдыбге╖ехе┐еде╩б╝╠┌б╩╜┼д▀║╟╛о▓╜д╬д┐дсд╦─║┼└дЄ╝л═│д╦▓├дид╞╬╔ддб╦д╚─у╝б┐Їе╣е╤е╦еєе░╠┌б╩─║┼└д╬║╟╣т╝б┐ЇдЄ║╟╛од╦д╣дыб╦д╧д│д│д╟д╧▓Єдпд│д╚дмд╟днд╩ддбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзе═е├е╚д╡дидвдьд╨дшдд}
+║╟╛ое╣е╤е╦еєе░╠┌дЄ═╤ддд┐епеще╣е┐еъеєе░д╟╠ф┬ъдЄ▓Є╖шд╖д┐╧├бг
+
+\subsection{║╟├╗╖╨╧й}
+
+\subsubsection{е└едепе╣е╚ещд╬евеые┤еъе║ер}
+дк╞ы└ўд▀д╬е└едепе╣е╚ещ╦ббг╩╒д╟д╧д╩дп─║┼└д╦е│е╣е╚дмдвдыд╚днд╧бв╩╒д╦е│е╣е╚дЄ▓▌д╣дшдж▓Є╝сд╖─╛д╣д│д╚д╟е└едепе╣е╚ещ╦бдмд╜д╬д▐д▐┼м═╤д╟дндыбг
+
+\subsubsection{┴┤е┌ев║╟├╗╖╨╧й}
+$W[i,j]^k$дЄбв$k$╚╓╠▄д▐д╟д╬─║┼└дЄ─╠д├д╞$i$длдщ$j$д╦╣╘дпд╚днд╬║╟╛ое│е╣е╚д╚д╣дыбгд╣дыд╚$W[i,j]^k=\min(W[i,j]^{k-1},W[i,k]^{k-1}+W[k,j]^{k-1})$дм└о╬йд╖бвд│дьдЄ═°═╤д╖д╞╕·╬и┼кд╦┴┤е┌ев║╟├╗╖╨╧йдм╡сдсдщдьдыбгд│дьд╧$O(n^3)$д╟д╧двдыдме└едепе╣е╚ещ╦бдЄ$n$▓є╕╞д╙╜╨д╣дшдъд╧┴сдп┴Ўдыбгд│дьдЄе╒еэеде╔-еяб╝е╖еуеы╦бд╚ддджбг
+
+\subsubsection{┐ф░▄┼к╩─╩ё}
+║╟┬ч╝б┐Їд╬─║┼└дЄ╡сдсдыд╚днд╧е╒еэеде╚д╬евеые┤еъе║ерд╬╖ы▓╠дЄ═╤дддьд╨╬╔ддбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбз┼┼╧├д╟╩╕╜ёдЄ║юды}
+╞№╦▄╕ь╞■╬╧д▀д┐ддд╩╧├бг
+
+\subsection{е═е├е╚еяб╝епе╒еэб╝д╚$2$╔Їе▐е├е┴еєе░}
+е═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╚д╧бв╜┼д▀╔╒дне░еще╒д╬двды─║┼└длдщдвды─║┼└д▐д╟бв│╞е╤еде╫д╬║╟┬ч═╞╬╠б╩╩╒д╬╜┼д▀б╦дЄ╝щд├д╞┴ўдыд│д╚д╬д╟днды║╟┬че╒еэб╝дЄ╡сдсды╠ф┬ъд╟двдыбг
+
+\subsubsection{$2$╔Їе▐е├е┴еєе░}
+2╔Їе░еще╒д╬║╟┬че▐е├е┴еєе░╠ф┬ъд╧е═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╚д╖д╞▓Єдлдьдыбг
+
+\subsubsection{е═е├е╚еяб╝епе╒еэб╝д╬╖╫╗╗}
+$s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д╚д╧бв$i$длдщ$j$д╪д╬е╒еэб╝д╬╬╠$f(i,j)$д╦д─ддд╞бв╜┼д▀дм$f(i,j)$д╬╩╒$(j,i)$д╚бв╜┼д▀дм$c(i,j)-f(i,j)$д╬╩╒$(i,j)$дЄ╗¤д─е░еще╒д╟двдыбг╗─═╛е╒еэб╝е░еще╒д╦$s$длдщ$t$д╪д╬╖╨╧йдмд╩дпд╩дыд▐д╟е╒еэб╝дЄ┴¤▓├д╡д╗дыд│д╚д╦дшдъе═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╧▓Єдлдьдыбг
+
+\subsection{евеые┤еъе║ерд╟д╧д╩дпе░еще╒д╬└▀╖╫}
+дддпд─длд╬е░еще╒д╬▒■═╤╬уд╬╛╥▓Ёбг╕┼┼╡┼кд╩е░еще╒евеые┤еъе║ердм╗╚дидыдшджд╦╠ф┬ъдЄ▓Є╝сд╣дыд╚дшддбг
+
+
+
+\section{┴╚╣чд╗├╡║ўд╚е╥ехб╝еъе╣е╞еге├епд╩╩¤╦б}
+
+
+
+
+
+
 
 \end{document}
