--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -379,10 +379,33 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 
 \section{┴╚╣чд╗├╡║ўд╚е╥ехб╝еъе╣е╞еге├епд╩╩¤╦б}
 
+\subsection{е╨е├епе╚еще├еп╦б}
+е╨е├епе╚еще├еп╦бд╧бв┴╚╣чд╗евеые┤еъе║ер╠ф┬ъд╬д╣д┘д╞д╬▓─╟╜д╩▓ЄдЄ╬є╡єд╣дыбге╨е├епе╚еще├еп╦бд╟д╧бв┐╝д╡═е└ш├╡║ўд╬дшджд╩╖┴д╟д╣д┘д╞д╬▓─╟╜д╩▓ЄдЄ╬є╡єд╣дыбг▓Є╕ї╩фдме┘епе╚еыд╟╔╜д╡дьдыд╚днбв$k$╝б╕╡д╬▓Є╕ї╩фдЄдтд╚д╦$k+1$╝б╕╡д╬▓Є╕ї╩фдЄд─дпдыбг
 
+\subsubsection{д╣д┘д╞д╬╔Ї╩м╜╕╣чдЄ╣╜└од╣ды}
+┐┐╡╢├═д╬╟█╬єдЄ┴┤е╤е┐б╝еє└╕└од╣ды╬убг
 
+\subsubsection{д╣д┘д╞д╬╔Ї╩м╜╕╣чдЄ╣╜└од╣ды}
+╜ч╬єдЄ┴┤е╤е┐б╝еє└╕└од╣ды╬убг
 
+\subsubsection{е░еще╒д╬д╣д┘д╞д╬╖╨╧йдЄ╣╜└од╣ды}
+д╒д─джд╦┐╝д╡═е└ш├╡║ўдЄд╖д╞дддыд└д▒д╦╕лдидыбг
 
+\subsection{├╡║ўд╬╗▐┤вдъ}
+├╡║ўд╦д─ддд╞бв╗▐┤вдъдф┬╨╛╬└нд╬═°═╤д╟┬ч╔¤д╦╖╫╗╗╬╠дЄ╕║дщд╗дыд│д╚дмдвдыбг
 
+\subsection{┐Ї╞╚}
+е╨е├епе╚еще├еп╦бд╟┐Ї╞╚дЄ▓Єдпбг▓Єдмд╩дд╛ь╣чд╧╗▐┤вдъд╖бв└й╠єд╬┬┐дде▐е╣дЄ═е└ш┼кд╦┴кд╓д│д╚д╟длд╩дъ┴сдпд╩дыбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзе┴езе╣е▄б╝е╔дЄ╚я╩дд╣ды}
+е┴езе╣е▄б╝е╔дЄ╚я╩дд╣дыбг╗▐┤вдъд╦дшдъ╖╫╗╗╬╠дЄ┬ч╔¤д╦╕║дщд╖д┐╧├бг
+
+\subsection{е╥ехб╝еъе╣е╞еге├епд╩├╡║ў}
+
+\subsubsection{ещеєе└ере╡еєе╫еъеєе░}
+ещеєе└ере╡еєе╫еъеєе░бвдвдыддд╧етеєе╞елеыеэ╦бд╧бв▓Є╢ї┤╓длдщещеєе└ерд╦д╥д╚д─дЄ┴кд╙╔╛▓┴д╣дыд│д╚дЄ╖лдъ╩╓д╣бгд│дьд╧бв▓Єдм╣тдд│╬╬ид╟┬╕║▀д╖бв├╡║ў├цд╦▓Єд╦└▄╢сд╖д╞дддыдлд╔дждл╚╜├╟д╟днд╩дд╛ь╣чд╦═н═╤д╟двдыбг
+
+\subsubsection{╢╔╜ъ├╡║ў}
+╗│┼╨дъ╦бд╦д─ддд╞бгб╓╟╙┐х╣┬д╦═юд┴д┐│╪╔Ї─╣б╫д├д╞╕└═╒дм┬└╗·д╟╜╨д╞дпдыдєд└д▒д╔▓┐д╩д╬длбг╔╛▓┴┤╪┐Їдм╞╠д╩д╚дндфбв├р╝б┴¤▓├┼кд╩╔╛▓┴┤╪┐Їд╬╖╫╗╗дм│┌д╩д╚днд╦д╧═н═╤д╟двдыбг
 
 \end{document}
