--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -408,4 +408,30 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 \subsubsection{╢╔╜ъ├╡║ў}
 ╗│┼╨дъ╦бд╦д─ддд╞бгб╓╟╙┐х╣┬д╦═юд┴д┐│╪╔Ї─╣б╫д├д╞╕└═╒дм┬└╗·д╟╜╨д╞дпдыдєд└д▒д╔▓┐д╩д╬длбг╔╛▓┴┤╪┐Їдм╞╠д╩д╚дндфбв├р╝б┴¤▓├┼кд╩╔╛▓┴┤╪┐Їд╬╖╫╗╗дм│┌д╩д╚днд╦д╧═н═╤д╟двдыбг
 
+\subsubsection{е╖е▀ехеьб╝е╞е├е╔еве╦б╝еъеєе░}
+╩к═¤│╪дЄ┐┐╗ўд╞┴╚╣чд╗║╟┼м▓╜╠ф┬ъдЄ▓Єдпбг╟о╬╧│╪д╟д╧╬│╗╥д╧╣теие═еыеоб╝╛ї┬╓д╪дт┴л░▄д╖╞└дыбг┼╡╖┐┼кд╦д╧бве│е╣е╚дм▓╝дмдыд╚днд╧╔мд║┴л░▄д╖бве│е╣е╚дм╛хдмдыд╚днд╧$e^{-\frac{(C(s_i)-C(s_{i+1}))}{k \cdot t_i}} \geq r$д╬д╚дн┴л░▄д╣дыбгд│д│д╟$t_1 = 1$бв$t_k = \alpha \cdot t_{k-1}$бв$0.8 \leq \alpha \leq 0.99$бв$r$д╧$0 \leq r \leq 1$д╬═Ё┐Їд╚д╣дыбгд│дьд╧╜ф▓єе╗б╝еые╣е▐еє╠ф┬ъдЄдлд╩дъджд▐дп▓Єдпбг
+
+\subsubsection{е╖е▀ехеьб╝е╞е├е╔еве╦б╝еъеєе░д╬▒■═╤}
+е░еще╒д╬║╟┬челе├е╚д╬╠ф┬ъбв╞╚╬й╜╕╣чдЄ╡сдсды╠ф┬ъбв▓є╧й┤Ё╚─д╬╟█├╓д╩д╔д╧е╖е▀ехеьб╝е╞е├е╔еве╦б╝еъеєе░д╦дшдъ▓Єдлдьдыбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзеще╕екд╟д╩ддд└д▒}
+е╥ехб╝еъе╣е╞еге├епдЄ╗╚д├д╞е╙еєе╤е├енеєе░╠ф┬ъд╬╩╤╖┴╚╟дЄ▓Єддд┐╧├бг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбз╟█╬єд╬еве╦б╝еъеєе░}
+е╖е▀ехеьб╝е╞е├е╔еве╦б╝еъеєе░дЄ▒■═╤д╖д┐╧├бг
+
+\subsection{┬╛д╬е╥ехб╝еъе╣е╞еге├епд╩├╡║ў╦б}
+░ф┼┴┼кевеые┤еъе║ербве╦ехб╝ещеые═е├е╚еяб╝епбв╡┬е│еэе╦б╝║╟┼м▓╜бгд│дьдщд╧░ь╚╠д╦╝ъ┤╓д╬дядъд╦╬╔дд▓Єдм╞└дщдьд╩ддбг
+
+\subsection{╩┬╬єевеые┤еъе║ер}
+░┬░╫д╦╩┬╬є▓╜д╖д╞дт┬ч│╡д╧╬╔ддд│д╚д╧д╩дпбвевеые┤еъе║ер┼к╣й╔╫дЄд╖д┐д█дждм╬╔ддд╚╜╥д┘д╞дддыбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбз┬одпд├д┐д├д╞д╔джд╖дшдждтд╩дд}
+╩┬╬є▓╜д╬╔щ▓┘е╨ещеєе╣дЄе▀е╣д├д╞▓─░е┴█д╩д│д╚д╦д╩д├д┐╧├бг
+
+
+
+\section{╞░┼к╖╫▓ш╦б}
+
+
 \end{document}
