--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -433,5 +433,63 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 
 \section{╞░┼к╖╫▓ш╦б}
 
+\subsection{енеуе├е╖еєе░ ┬╨ ╖╫╗╗}
+╞░┼к╖╫▓ш╦бд╧╦▄╝┴┼кд╦д╧╡н▓▒╬╬░шд╚╗■┤╓д╚д╬е╚еьб╝е╔еке╒д╟двдыбг
+
+\subsubsection{║╞╡вд╦дшдые╒еге▄е╩е├е┴┐Ї}
+║╞╡вд╟╜ёдпд╚╖╫╗╗╬╠д╧║╟─уд╟дт$1.6^n$д╦д╩д├д╞д╖д▐джбг
+
+\subsubsection{енеуе├е╖еєе░д╦дшдые╒еге▄е╩е├е┴┐Ї}
+╖╫╗╗╖ы▓╠дЄесетд╖д╞дкд▒д╨е╒еге▄е╩е├е┴┐Їд╧└■╖┴╗■┤╓д╟╡сд▐дыбг
+
+\subsubsection{╞░┼к╖╫▓ш╦бд╦дшдые╒еге▄е╩е├е┴┐Ї}
+д│д│д╟д╧╖╫╗╗╖ы▓╠дЄд╣д┘д╞╡н▓▒д╖д╩дпд╚дт╬╔ддд╬д╟╡н▓▒═╞╬╠дт─ъ┐Їд╦д╟дндыбг
+
+\subsubsection{2╣р╖╕┐Ї}
+2╣р╖╕┐Ї$_n\mathrm{C}_x$д╧$_n\mathrm{C}_k = _{n-1}\mathrm{C}_{k-1} + _{n-1}\mathrm{C}_{k}$д╟двдыдлдщ╞░┼к╖╫▓ш╦бд╟╡сдсдщдьдыбг
+
+\subsection{╢с╗ў╩╕╗·╬єе▐е├е┴еєе░}
+╢с╗ў╩╕╗·╬єе▐е├е┴еєе░д╟д╧бве╣е┌еые▀е╣дЄ╩фд├д╞═┐дидщдьд┐╩╕╗·╬єд╦дтд├д╚дт╢сдд╩╕╗·╬єдЄ├╡д╣бг
+
+\subsubsection{║╞╡вд╦дшды╩╘╜╕╡ў╬е}
+║╞╡вд╟╩╘╜╕╡ў╬едЄ╡сдсдыд│д╚дмд╟дндыбг┤╓░уддд╦е│е╣е╚дЄ▓▌д╖бв$P$д╚$T$д╬╚ц│╙д╦д─ддд╞$D[i,j]$дЄ$P_1,P_2,P_3,...,P_i$д╚$T_1,T_2,T_3,...,T_j$д╬║╟╛ое│е╣е╚д╚д╣дыбгд╣дыд╚$D[i,j]$д╧бв$D[i-1,j-1]$д▐д┐д╧$D[i-1,j-1]+1$б╩├╓дн┤╣диб╦бв$D[i-1,j]+1$б╩┴▐╞■б╦бв$D[i,j-1]+1$б╩║я╜№б╦д╬джд┴║╟╛од╬дтд╬д╚д╩дыбг
+
+\subsubsection{╞░┼к╖╫▓ш╦бд╦дшды╩╘╜╕╡ў╬е}
+╛х╡нд╧║╞╡вд╟╜ёдпд╚├┘дддм╞░┼к╖╫▓ш╦бд╟╜ёдпд╚┴сддбг
+
+\subsubsection{╖╨╧йд╬║╞╣╜└о}
+╣╘д├д┐┴р║юдЄ╟█╬єд╦╡н╧┐д╖д╞дкдпд│д╚д╟бв┴р║юд╬╖╨╧йдЄ═╞░╫д╦║╞╣╜└од╣дыд│д╚дмд╟дндыбг
+
+\subsubsection{д╡д▐д╢д▐д╩╩╘╜╕╡ў╬е}
+┬┐дпд╬╠ф┬ъдм╢с╗ў╩╕╗·╬єе▐е├е┴еєе░д╬╞├╩╠д╩╛ь╣чд╚д╖д╞▓Єдлдьдыбг╔Ї╩м╩╕╗·╬єе▐е├е┴еєе░д╧е┤б╝еыд╚д╣дые╗еыд╬╗╪─ъдЄ╩╤дидьд╨╬╔ддбг║╟─╣╢ж─╠╔Ї╩м╩╕╗·╬єд╧┬х╞■дЄ╢╪╗▀д╣дьд╨╬╔ддбг║╟┬ч├▒─┤╔Ї╩м╬є╠ф┬ъд╟д╧бвдтд╚д╬╬єдЄе╜б╝е╚д╖д┐дтд╬дЄ╚ц│╙┬╨╛▌д╚д╣дьд╨╬╔ддбг
+
+\subsection{║╟─╣┴¤▓├╬є}
+╞░┼к╖╫▓ш╦бдЄ└▀╖╫д╖д╞д▀ды╬убг╟█╬є$s$д╬║╟─╣┴¤▓├╬єд╧бв╜к├╝дм$s_i$д╬║╟─╣┴¤▓├╬єд╬─╣д╡дЄ╟█╬єд╚д╖д╞╩▌╗¤д╣дыд│д╚д╦дшдъ┤╩├▒д╦╡сдсдщдьдыбгд▐д┐бвд╜дьд╛дьд╦д─ддд╞─╛┴░═╫┴╟дЄ╩▌╗¤д╣дыд│д╚д╦дшдъ║╞╣╜└одт▓─╟╜д╟двдыбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзеэе╓е╣е┐б╝д╬┐╩▓╜}
+╞░┼к╖╫▓ш╦бд╦дшдъ▓ш┴№д╬етб╝е╒егеєе░дЄ╣╘дж╧├бг
+
+\subsection{╩м│ф╠ф┬ъ}
+└■╖┴╩м│ф╠ф┬ъд╚д╧бв═┐дидщдьд┐└░┐Ї╬єдЄбв╜ч╜°дЄ╩╤дид║д╦│╞╬╬░шд╟д╬╣ч╖╫├═д╬║╟┬ч├═дЄ║╟╛од╦д╣дыдшджд╦╩м│фд╣ды╠ф┬ъд╟двдъбв╩┬╬є╜ш═¤д╦дшдп╕╜дьдыбгд│дьд╧бв$M[n,k]$дЄ${s_1,s_2,s_3,...,s_n}$дЄ$k$╕─д╬╢ш┤╓д╦╩м│фд╖д┐д╚днд╬║╟┼мд╩е│е╣е╚д╚д╣дыбгд╣дыд╚$M[n,k] = \min^{n}_{i=1} \max (M[i,k-1],\sum^{n}_{j=i+1} s_j)$д╟двдыбг
+
+\subsection{╩╕╠о╝л═│╩╕╦бд╬╣╜╩╕▓Є└╧}
+е┴ечере╣енб╝╔╕╜р╖┴д╚д╧бв╝л╠└д╟д╩дд│╞╡м┬здм$X \to YZ$двдыддд╧$X \to \alpha$д╬д╔д┴дщдлд╟─ъ╡┴д╡дьды╩╕╦бд╬д│д╚дЄддджбг╟д░╒д╬╩╕╠о╝л═│╩╕╦бд╧е┴ечере╣енб╝╔╕╜р╖┴д╦╩╤┤╣д╟дндыбг$M[i,j,X]$дЄ╔Ї╩м╩╕╗·╬є$S[i,j]$дм╚є╜к├╝╡н╣ц$X$д╦дшдъ└╕└од╡дьдыд╚дн┐┐д╟двдые╓б╝еы┤╪┐Їд╚д╣дыбгд╣дыд╚$M[i,j,k] = \bigvee_{(X \to YX) \in G}{(\bigvee^j_{i=k}{M[i,k,Y] \cdot M[k+1,j,Z]})}$д╟двдыбгд│дьдЄ═╤ддд╞╞░┼к╖╫▓ш╦бд╦дшдъ╣╜╩╕▓Є└╧дм╣╘дидыбг
+
+\subsubsection{║╟╛о╜┼д▀╗░│╤╩м│ф}
+дшдпдядлдщд╩ддбг
+
+\subsection{╞░┼к╖╫▓ш╦бд╬╕┬│жбзTSP}
+
+\subsubsection{╞░┼к╖╫▓ш╦бд╬евеые┤еъе║ердм└╡д╖ддд╬д╧д╔д╬дшджд╩д╚дндлбй}
+╞░┼к╖╫▓ш╦бд╧бв╕╜║▀д▐д╟д╦д╔д╬дшджд╩┴р║ю╬єдм╝┬╣╘д╡дьд╞днд┐длдЄ├╬ды╔м═╫дмд╩дд╠ф┬ъд╦д╬д▀┼мд╣дыбг
+
+\subsubsection{╞░┼к╖╫▓ш╦бд╧д╔д╬дшджд╩д╚днд╦╕·╬идмдшддд╬длбй}
+╞░┼к╖╫▓ш╦бд╧бвеке╓е╕езепе╚д╦╜ч╜°дмд╩ддд╚днбвд┐ддд╞дд╗╪┐Ї┼кд╩╗■┤╓д╚╡н▓▒╬╬░шдЄ╔м═╫д╚д╣дыбг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбз▓с╡юд╧д┐д└д╬Prolog}
+╠╡═¤╞ё┬ъдлд╚╗╫д├д┐дщ╞░┼к╖╫▓ш╦бд╟▓Єд▒д┐дшд╚дддж╧├бг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзе╨б╝е│б╝е╔д╬д┐дсд╬е╞ене╣е╚░╡╜╠}
+д│д┴дщдт╞▒д╕дшджд╩╧├бг
 
 \end{document}
