--- a/algorithm_1.tex
+++ b/algorithm_1.tex
@@ -344,7 +344,7 @@ Strassenд╧$n \times n$╣╘╬єд╬└╤дЄ$n/2 \times n/2$╣╘╬єд╬└╤7д─д╦╩м│фд╣дыд│д╚д╦дшдъб
 union-fieldе╟б╝е┐╣╜┬дд╧╟█╬єд╟╕·╬идшдп╔╜д╡дьдыбг╟█╬єд╬│╞═╫┴╟д╧┐╞д╬едеєе╟е├епе╣дЄ╗╪д╖бв╝л╩м╝л┐╚дм╗╪─ъд╡дьдыд╚днд╜дьдм║мд╟двдыд│д╚дЄ░╒╠гд╣дыбг
 
 \subsubsection{║╟╛ое╣е╤е╦еєе░╠┌д╬╩╤╝я}
-║╟┬че╣е╤е╦еєе░╠┌д╧├▒д╦д╣д┘д╞д╬╩╒д╦╔ф╣цдЄд─д▒дьд╨╞└дщдьдыбг║╟┬ч└╤е╣е╤е╦еєе░╠┌д╧╩╒д╬╜┼д▀дЄ┬╨┐Їд╚╝шдъ┬╪дидыд│д╚д╦дшдъ╞└дщдьдыбге╖ехе┐еде╩б╝╠┌б╩╜┼д▀║╟╛о▓╜д╬д┐дсд╦─║┼└дЄ╝л═│д╦▓├дид╞╬╔ддб╦д╚─у╝б┐Їе╣е╤е╦еєе░╠┌б╩─║┼└д╬║╟╣т╝б┐ЇдЄ║╟╛од╦д╣дыб╦д╧д│д│д╟д╧▓Єдпд│д╚дмд╟днд╩ддбг
+║╟┬че╣е╤е╦еєе░╠┌д╧├▒д╦д╣д┘д╞д╬╩╒д╦╔ф╣цдЄд─д▒дьд╨╞└дщдьдыбг║╟┬ч└╤е╣е╤е╦еєе░╠┌д╧╩╒д╬╜┼д▀дЄ┬╨┐Їд╚╝шдъ┬╪дидыд│д╚д╦дшдъ╞└дщдьдыбг\textbf{е╖ехе┐еде╩б╝╠┌}б╩╜┼д▀║╟╛о▓╜д╬д┐дсд╦─║┼└дЄ╝л═│д╦▓├дид╞╬╔ддб╦д╚\textbf{─у╝б┐Їе╣е╤е╦еєе░╠┌}б╩─║┼└д╬║╟╣т╝б┐ЇдЄ║╟╛од╦д╣дыб╦д╧д│д│д╟д╧▓Єдпд│д╚дмд╟днд╩ддбг
 
 \subsection{е▄епд╬└▀╖╫╩│└я╡нбзе═е├е╚д╡дидвдьд╨дшдд}
 ║╟╛ое╣е╤е╦еєе░╠┌дЄ═╤ддд┐епеще╣е┐еъеєе░д╟╠ф┬ъдЄ▓Є╖шд╖д┐╧├бг
@@ -352,10 +352,10 @@ union-fieldе╟б╝е┐╣╜┬дд╧╟█╬єд╟╕·╬идшдп╔╜д╡дьдыбг╟█╬єд╬│╞═╫┴╟д╧┐╞д╬едеєе╟е├епе╣дЄ╗
 \subsection{║╟├╗╖╨╧й}
 
 \subsubsection{е└едепе╣е╚ещд╬евеые┤еъе║ер}
-дк╞ы└ўд▀д╬е└едепе╣е╚ещ╦ббг╩╒д╟д╧д╩дп─║┼└д╦е│е╣е╚дмдвдыд╚днд╧бв╩╒д╦е│е╣е╚дЄ▓▌д╣дшдж▓Є╝сд╖─╛д╣д│д╚д╟е└едепе╣е╚ещ╦бдмд╜д╬д▐д▐┼м═╤д╟дндыбг
+дк╞ы└ўд▀д╬е└\textbf{едепе╣е╚ещ╦б}бг╩╒д╟д╧д╩дп─║┼└д╦е│е╣е╚дмдвдыд╚днд╧бв╩╒д╦е│е╣е╚дЄ▓▌д╣дшдж▓Є╝сд╖─╛д╣д│д╚д╟е└едепе╣е╚ещ╦бдмд╜д╬д▐д▐┼м═╤д╟дндыбг
 
 \subsubsection{┴┤е┌ев║╟├╗╖╨╧й}
-$W[i,j]^k$дЄбв$k$╚╓╠▄д▐д╟д╬─║┼└дЄ─╠д├д╞$i$длдщ$j$д╦╣╘дпд╚днд╬║╟╛ое│е╣е╚д╚д╣дыбгд╣дыд╚$W[i,j]^k=\min(W[i,j]^{k-1},W[i,k]^{k-1}+W[k,j]^{k-1})$дм└о╬йд╖бвд│дьдЄ═°═╤д╖д╞╕·╬и┼кд╦┴┤е┌ев║╟├╗╖╨╧йдм╡сдсдщдьдыбгд│дьд╧$O(n^3)$д╟д╧двдыдме└едепе╣е╚ещ╦бдЄ$n$▓є╕╞д╙╜╨д╣дшдъд╧┴сдп┴Ўдыбгд│дьдЄе╒еэеде╔-еяб╝е╖еуеы╦бд╚ддджбг
+$W[i,j]^k$дЄбв$k$╚╓╠▄д▐д╟д╬─║┼└дЄ─╠д├д╞$i$длдщ$j$д╦╣╘дпд╚днд╬║╟╛ое│е╣е╚д╚д╣дыбгд╣дыд╚$W[i,j]^k=\min(W[i,j]^{k-1},W[i,k]^{k-1}+W[k,j]^{k-1})$дм└о╬йд╖бвд│дьдЄ═°═╤д╖д╞╕·╬и┼кд╦┴┤е┌ев║╟├╗╖╨╧йдм╡сдсдщдьдыбгд│дьд╧$O(n^3)$д╟д╧двдыдме└едепе╣е╚ещ╦бдЄ$n$▓є╕╞д╙╜╨д╣дшдъд╧┴сдп┴Ўдыбгд│дьдЄ\textbf{е╒еэеде╔-еяб╝е╖еуеы╦б}д╚ддджбг
 
 \subsubsection{┐ф░▄┼к╩─╩ё}
 ║╟┬ч╝б┐Їд╬─║┼└дЄ╡сдсдыд╚днд╧е╒еэеде╚д╬евеые┤еъе║ерд╬╖ы▓╠дЄ═╤дддьд╨╬╔ддбг
@@ -364,10 +364,10 @@ $W[i,j]^k$дЄбв$k$╚╓╠▄д▐д╟д╬─║┼└дЄ─╠д├д╞$i$длдщ$j$д╦╣╘дпд╚днд╬║╟╛ое│е╣е╚д╚д╣дыбгд
 ╞№╦▄╕ь╞■╬╧д▀д┐ддд╩╧├бг
 
 \subsection{е═е├е╚еяб╝епе╒еэб╝д╚$2$╔Їе▐е├е┴еєе░}
-е═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╚д╧бв╜┼д▀╔╒дне░еще╒д╬двды─║┼└длдщдвды─║┼└д▐д╟бв│╞е╤еде╫д╬║╟┬ч═╞╬╠б╩╩╒д╬╜┼д▀б╦дЄ╝щд├д╞┴ўдыд│д╚д╬д╟днды║╟┬че╒еэб╝дЄ╡сдсды╠ф┬ъд╟двдыбг
+\textbf{е═е├е╚еяб╝епе╒еэб╝╠ф┬ъ}д╚д╧бв╜┼д▀╔╒дне░еще╒д╬двды─║┼└длдщдвды─║┼└д▐д╟бв│╞е╤еде╫д╬║╟┬ч═╞╬╠б╩╩╒д╬╜┼д▀б╦дЄ╝щд├д╞┴ўдыд│д╚д╬д╟днды║╟┬че╒еэб╝дЄ╡сдсды╠ф┬ъд╟двдыбг
 
 \subsubsection{$2$╔Їе▐е├е┴еєе░}
-2╔Їе░еще╒д╬║╟┬че▐е├е┴еєе░╠ф┬ъд╧е═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╚д╖д╞▓Єдлдьдыбг
+\textbf{2╔Їе░еще╒}д╬║╟┬че▐е├е┴еєе░╠ф┬ъд╧е═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╚д╖д╞▓Єдлдьдыбг
 
 \subsubsection{е═е├е╚еяб╝епе╒еэб╝д╬╖╫╗╗}
 $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д╚д╧бв$i$длдщ$j$д╪д╬е╒еэб╝д╬╬╠$f(i,j)$д╦д─ддд╞бв╜┼д▀дм$f(i,j)$д╬╩╒$(j,i)$д╚бв╜┼д▀дм$c(i,j)-f(i,j)$д╬╩╒$(i,j)$дЄ╗¤д─е░еще╒д╟двдыбг╗─═╛е╒еэб╝е░еще╒д╦$s$длдщ$t$д╪д╬╖╨╧йдмд╩дпд╩дыд▐д╟е╒еэб╝дЄ┴¤▓├д╡д╗дыд│д╚д╦дшдъе═е├е╚еяб╝епе╒еэб╝╠ф┬ъд╧▓Єдлдьдыбг
@@ -380,7 +380,7 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 \section{┴╚╣чд╗├╡║ўд╚е╥ехб╝еъе╣е╞еге├епд╩╩¤╦б}
 
 \subsection{е╨е├епе╚еще├еп╦б}
-е╨е├епе╚еще├еп╦бд╧бв┴╚╣чд╗евеые┤еъе║ер╠ф┬ъд╬д╣д┘д╞д╬▓─╟╜д╩▓ЄдЄ╬є╡єд╣дыбге╨е├епе╚еще├еп╦бд╟д╧бв┐╝д╡═е└ш├╡║ўд╬дшджд╩╖┴д╟д╣д┘д╞д╬▓─╟╜д╩▓ЄдЄ╬є╡єд╣дыбг▓Є╕ї╩фдме┘епе╚еыд╟╔╜д╡дьдыд╚днбв$k$╝б╕╡д╬▓Є╕ї╩фдЄдтд╚д╦$k+1$╝б╕╡д╬▓Є╕ї╩фдЄд─дпдыбг
+\textbf{е╨е├епе╚еще├еп╦б}д╧бв┴╚╣чд╗евеые┤еъе║ер╠ф┬ъд╬д╣д┘д╞д╬▓─╟╜д╩▓ЄдЄ╬є╡єд╣дыбге╨е├епе╚еще├еп╦бд╟д╧бв┐╝д╡═е└ш├╡║ўд╬дшджд╩╖┴д╟д╣д┘д╞д╬▓─╟╜д╩▓ЄдЄ╬є╡єд╣дыбг▓Є╕ї╩фдме┘епе╚еыд╟╔╜д╡дьдыд╚днбв$k$╝б╕╡д╬▓Є╕ї╩фдЄдтд╚д╦$k+1$╝б╕╡д╬▓Є╕ї╩фдЄд─дпдыбг
 
 \subsubsection{д╣д┘д╞д╬╔Ї╩м╜╕╣чдЄ╣╜└од╣ды}
 ┐┐╡╢├═д╬╟█╬єдЄ┴┤е╤е┐б╝еє└╕└од╣ды╬убг
@@ -392,7 +392,7 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 д╒д─джд╦┐╝д╡═е└ш├╡║ўдЄд╖д╞дддыд└д▒д╦╕лдидыбг
 
 \subsection{├╡║ўд╬╗▐┤вдъ}
-├╡║ўд╦д─ддд╞бв╗▐┤вдъдф┬╨╛╬└нд╬═°═╤д╟┬ч╔¤д╦╖╫╗╗╬╠дЄ╕║дщд╗дыд│д╚дмдвдыбг
+├╡║ўд╦д─ддд╞бв\textbf{╗▐┤вдъ}дф┬╨╛╬└нд╬═°═╤д╟┬ч╔¤д╦╖╫╗╗╬╠дЄ╕║дщд╗дыд│д╚дмдвдыбг
 
 \subsection{┐Ї╞╚}
 е╨е├епе╚еще├еп╦бд╟┐Ї╞╚дЄ▓Єдпбг▓Єдмд╩дд╛ь╣чд╧╗▐┤вдъд╖бв└й╠єд╬┬┐дде▐е╣дЄ═е└ш┼кд╦┴кд╓д│д╚д╟длд╩дъ┴сдпд╩дыбг
@@ -403,10 +403,10 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 \subsection{е╥ехб╝еъе╣е╞еге├епд╩├╡║ў}
 
 \subsubsection{ещеєе└ере╡еєе╫еъеєе░}
-ещеєе└ере╡еєе╫еъеєе░бвдвдыддд╧етеєе╞елеыеэ╦бд╧бв▓Є╢ї┤╓длдщещеєе└ерд╦д╥д╚д─дЄ┴кд╙╔╛▓┴д╣дыд│д╚дЄ╖лдъ╩╓д╣бгд│дьд╧бв▓Єдм╣тдд│╬╬ид╟┬╕║▀д╖бв├╡║ў├цд╦▓Єд╦└▄╢сд╖д╞дддыдлд╔дждл╚╜├╟д╟днд╩дд╛ь╣чд╦═н═╤д╟двдыбг
+\textbf{ещеєе└ере╡еєе╫еъеєе░}бвдвдыддд╧\textbf{етеєе╞елеыеэ╦б}д╧бв▓Є╢ї┤╓длдщещеєе└ерд╦д╥д╚д─дЄ┴кд╙╔╛▓┴д╣дыд│д╚дЄ╖лдъ╩╓д╣бгд│дьд╧бв▓Єдм╣тдд│╬╬ид╟┬╕║▀д╖бв├╡║ў├цд╦▓Єд╦└▄╢сд╖д╞дддыдлд╔дждл╚╜├╟д╟днд╩дд╛ь╣чд╦═н═╤д╟двдыбг
 
 \subsubsection{╢╔╜ъ├╡║ў}
-╗│┼╨дъ╦бд╦д─ддд╞бгб╓╟╙┐х╣┬д╦═юд┴д┐│╪╔Ї─╣б╫д├д╞╕└═╒дм┬└╗·д╟╜╨д╞дпдыдєд└д▒д╔▓┐д╩д╬длбг╔╛▓┴┤╪┐Їдм╞╠д╩д╚дндфбв├р╝б┴¤▓├┼кд╩╔╛▓┴┤╪┐Їд╬╖╫╗╗дм│┌д╩д╚днд╦д╧═н═╤д╟двдыбг
+\textbf{╗│┼╨дъ╦б}д╦д─ддд╞бгб╓\textbf{╟╙┐х╣┬д╦═юд┴д┐│╪╔Ї─╣}б╫д├д╞╕└═╒дм┬└╗·д╟╜╨д╞дпдыдєд└д▒д╔▓┐д╩д╬длбг╔╛▓┴┤╪┐Їдм╞╠д╩д╚дндфбв├р╝б┴¤▓├┼кд╩╔╛▓┴┤╪┐Їд╬╖╫╗╗дм│┌д╩д╚днд╦д╧═н═╤д╟двдыбг
 
 \subsubsection{е╖е▀ехеьб╝е╞е├е╔еве╦б╝еъеєе░}
 ╩к═¤│╪дЄ┐┐╗ўд╞┴╚╣чд╗║╟┼м▓╜╠ф┬ъдЄ▓Єдпбг╟о╬╧│╪д╟д╧╬│╗╥д╧╣теие═еыеоб╝╛ї┬╓д╪дт┴л░▄д╖╞└дыбг┼╡╖┐┼кд╦д╧бве│е╣е╚дм▓╝дмдыд╚днд╧╔мд║┴л░▄д╖бве│е╣е╚дм╛хдмдыд╚днд╧$e^{-\frac{(C(s_i)-C(s_{i+1}))}{k \cdot t_i}} \geq r$д╬д╚дн┴л░▄д╣дыбгд│д│д╟$t_1 = 1$бв$t_k = \alpha \cdot t_{k-1}$бв$0.8 \leq \alpha \leq 0.99$бв$r$д╧$0 \leq r \leq 1$д╬═Ё┐Їд╚д╣дыбгд│дьд╧╜ф▓єе╗б╝еые╣е▐еє╠ф┬ъдЄдлд╩дъджд▐дп▓Єдпбг
@@ -421,7 +421,7 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 е╖е▀ехеьб╝е╞е├е╔еве╦б╝еъеєе░дЄ▒■═╤д╖д┐╧├бг
 
 \subsection{┬╛д╬е╥ехб╝еъе╣е╞еге├епд╩├╡║ў╦б}
-░ф┼┴┼кевеые┤еъе║ербве╦ехб╝ещеые═е├е╚еяб╝епбв╡┬е│еэе╦б╝║╟┼м▓╜бгд│дьдщд╧░ь╚╠д╦╝ъ┤╓д╬дядъд╦╬╔дд▓Єдм╞└дщдьд╩ддбг
+\textbf{░ф┼┴┼кевеые┤еъе║ер}бв\textbf{е╦ехб╝ещеые═е├е╚еяб╝еп}бв\textbf{╡┬е│еэе╦б╝║╟┼м▓╜}бгд│дьдщд╧░ь╚╠д╦╝ъ┤╓д╬дядъд╦╬╔дд▓Єдм╞└дщдьд╩ддбг
 
 \subsection{╩┬╬єевеые┤еъе║ер}
 ░┬░╫д╦╩┬╬є▓╜д╖д╞дт┬ч│╡д╧╬╔ддд│д╚д╧д╩дпбвевеые┤еъе║ер┼к╣й╔╫дЄд╖д┐д█дждм╬╔ддд╚╜╥д┘д╞дддыбг
@@ -434,7 +434,7 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 \section{╞░┼к╖╫▓ш╦б}
 
 \subsection{енеуе├е╖еєе░ ┬╨ ╖╫╗╗}
-╞░┼к╖╫▓ш╦бд╧╦▄╝┴┼кд╦д╧╡н▓▒╬╬░шд╚╗■┤╓д╚д╬е╚еьб╝е╔еке╒д╟двдыбг
+\textbf{╞░┼к╖╫▓ш╦б}д╧╦▄╝┴┼кд╦д╧╡н▓▒╬╬░шд╚╗■┤╓д╚д╬е╚еьб╝е╔еке╒д╟двдыбг
 
 \subsubsection{║╞╡вд╦дшдые╒еге▄е╩е├е┴┐Ї}
 ║╞╡вд╟╜ёдпд╚╖╫╗╗╬╠д╧║╟─уд╟дт$1.6^n$д╦д╩д├д╞д╖д▐джбг
@@ -449,10 +449,10 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 2╣р╖╕┐Ї$_n\mathrm{C}_x$д╧$_n\mathrm{C}_k = _{n-1}\mathrm{C}_{k-1} + _{n-1}\mathrm{C}_{k}$д╟двдыдлдщ╞░┼к╖╫▓ш╦бд╟╡сдсдщдьдыбг
 
 \subsection{╢с╗ў╩╕╗·╬єе▐е├е┴еєе░}
-╢с╗ў╩╕╗·╬єе▐е├е┴еєе░д╟д╧бве╣е┌еые▀е╣дЄ╩фд├д╞═┐дидщдьд┐╩╕╗·╬єд╦дтд├д╚дт╢сдд╩╕╗·╬єдЄ├╡д╣бг
+\textbf{╢с╗ў╩╕╗·╬єе▐е├е┴еєе░}д╟д╧бве╣е┌еые▀е╣дЄ╩фд├д╞═┐дидщдьд┐╩╕╗·╬єд╦дтд├д╚дт╢сдд╩╕╗·╬єдЄ├╡д╣бг
 
 \subsubsection{║╞╡вд╦дшды╩╘╜╕╡ў╬е}
-║╞╡вд╟╩╘╜╕╡ў╬едЄ╡сдсдыд│д╚дмд╟дндыбг┤╓░уддд╦е│е╣е╚дЄ▓▌д╖бв$P$д╚$T$д╬╚ц│╙д╦д─ддд╞$D[i,j]$дЄ$P_1,P_2,P_3,...,P_i$д╚$T_1,T_2,T_3,...,T_j$д╬║╟╛ое│е╣е╚д╚д╣дыбгд╣дыд╚$D[i,j]$д╧бв$D[i-1,j-1]$д▐д┐д╧$D[i-1,j-1]+1$б╩├╓дн┤╣диб╦бв$D[i-1,j]+1$б╩┴▐╞■б╦бв$D[i,j-1]+1$б╩║я╜№б╦д╬джд┴║╟╛од╬дтд╬д╚д╩дыбг
+║╞╡вд╟\textbf{╩╘╜╕╡ў╬е}дЄ╡сдсдыд│д╚дмд╟дндыбг┤╓░уддд╦е│е╣е╚дЄ▓▌д╖бв$P$д╚$T$д╬╚ц│╙д╦д─ддд╞$D[i,j]$дЄ$P_1,P_2,P_3,...,P_i$д╚$T_1,T_2,T_3,...,T_j$д╬║╟╛ое│е╣е╚д╚д╣дыбгд╣дыд╚$D[i,j]$д╧бв$D[i-1,j-1]$д▐д┐д╧$D[i-1,j-1]+1$б╩├╓дн┤╣диб╦бв$D[i-1,j]+1$б╩┴▐╞■б╦бв$D[i,j-1]+1$б╩║я╜№б╦д╬джд┴║╟╛од╬дтд╬д╚д╩дыбг
 
 \subsubsection{╞░┼к╖╫▓ш╦бд╦дшды╩╘╜╕╡ў╬е}
 ╛х╡нд╧║╞╡вд╟╜ёдпд╚├┘дддм╞░┼к╖╫▓ш╦бд╟╜ёдпд╚┴сддбг
@@ -461,7 +461,7 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 ╣╘д├д┐┴р║юдЄ╟█╬єд╦╡н╧┐д╖д╞дкдпд│д╚д╟бв┴р║юд╬╖╨╧йдЄ═╞░╫д╦║╞╣╜└од╣дыд│д╚дмд╟дндыбг
 
 \subsubsection{д╡д▐д╢д▐д╩╩╘╜╕╡ў╬е}
-┬┐дпд╬╠ф┬ъдм╢с╗ў╩╕╗·╬єе▐е├е┴еєе░д╬╞├╩╠д╩╛ь╣чд╚д╖д╞▓Єдлдьдыбг╔Ї╩м╩╕╗·╬єе▐е├е┴еєе░д╧е┤б╝еыд╚д╣дые╗еыд╬╗╪─ъдЄ╩╤дидьд╨╬╔ддбг║╟─╣╢ж─╠╔Ї╩м╩╕╗·╬єд╧┬х╞■дЄ╢╪╗▀д╣дьд╨╬╔ддбг║╟┬ч├▒─┤╔Ї╩м╬є╠ф┬ъд╟д╧бвдтд╚д╬╬єдЄе╜б╝е╚д╖д┐дтд╬дЄ╚ц│╙┬╨╛▌д╚д╣дьд╨╬╔ддбг
+┬┐дпд╬╠ф┬ъдм╢с╗ў╩╕╗·╬єе▐е├е┴еєе░д╬╞├╩╠д╩╛ь╣чд╚д╖д╞▓Єдлдьдыбг\textbf{╔Ї╩м╩╕╗·╬єе▐е├е┴еєе░}д╧е┤б╝еыд╚д╣дые╗еыд╬╗╪─ъдЄ╩╤дидьд╨╬╔ддбг\textbf{║╟─╣╢ж─╠╔Ї╩м╩╕╗·╬є}д╧┬х╞■дЄ╢╪╗▀д╣дьд╨╬╔ддбг\textbf{║╟┬ч├▒─┤╔Ї╩м╬є╠ф┬ъ}д╟д╧бвдтд╚д╬╬єдЄе╜б╝е╚д╖д┐дтд╬дЄ╚ц│╙┬╨╛▌д╚д╣дьд╨╬╔ддбг
 
 \subsection{║╟─╣┴¤▓├╬є}
 ╞░┼к╖╫▓ш╦бдЄ└▀╖╫д╖д╞д▀ды╬убг╟█╬є$s$д╬║╟─╣┴¤▓├╬єд╧бв╜к├╝дм$s_i$д╬║╟─╣┴¤▓├╬єд╬─╣д╡дЄ╟█╬єд╚д╖д╞╩▌╗¤д╣дыд│д╚д╦дшдъ┤╩├▒д╦╡сдсдщдьдыбгд▐д┐бвд╜дьд╛дьд╦д─ддд╞─╛┴░═╫┴╟дЄ╩▌╗¤д╣дыд│д╚д╦дшдъ║╞╣╜└одт▓─╟╜д╟двдыбг
@@ -473,7 +473,7 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 └■╖┴╩м│ф╠ф┬ъд╚д╧бв═┐дидщдьд┐└░┐Ї╬єдЄбв╜ч╜°дЄ╩╤дид║д╦│╞╬╬░шд╟д╬╣ч╖╫├═д╬║╟┬ч├═дЄ║╟╛од╦д╣дыдшджд╦╩м│фд╣ды╠ф┬ъд╟двдъбв╩┬╬є╜ш═¤д╦дшдп╕╜дьдыбгд│дьд╧бв$M[n,k]$дЄ${s_1,s_2,s_3,...,s_n}$дЄ$k$╕─д╬╢ш┤╓д╦╩м│фд╖д┐д╚днд╬║╟┼мд╩е│е╣е╚д╚д╣дыбгд╣дыд╚$M[n,k] = \min^{n}_{i=1} \max (M[i,k-1],\sum^{n}_{j=i+1} s_j)$д╟двдыбг
 
 \subsection{╩╕╠о╝л═│╩╕╦бд╬╣╜╩╕▓Є└╧}
-е┴ечере╣енб╝╔╕╜р╖┴д╚д╧бв╝л╠└д╟д╩дд│╞╡м┬здм$X \to YZ$двдыддд╧$X \to \alpha$д╬д╔д┴дщдлд╟─ъ╡┴д╡дьды╩╕╦бд╬д│д╚дЄддджбг╟д░╒д╬╩╕╠о╝л═│╩╕╦бд╧е┴ечере╣енб╝╔╕╜р╖┴д╦╩╤┤╣д╟дндыбг$M[i,j,X]$дЄ╔Ї╩м╩╕╗·╬є$S[i,j]$дм╚є╜к├╝╡н╣ц$X$д╦дшдъ└╕└од╡дьдыд╚дн┐┐д╟двдые╓б╝еы┤╪┐Їд╚д╣дыбгд╣дыд╚$M[i,j,k] = \bigvee_{(X \to YX) \in G}{(\bigvee^j_{i=k}{M[i,k,Y] \cdot M[k+1,j,Z]})}$д╟двдыбгд│дьдЄ═╤ддд╞╞░┼к╖╫▓ш╦бд╦дшдъ╣╜╩╕▓Є└╧дм╣╘дидыбг
+\textbf{е┴ечере╣енб╝╔╕╜р╖┴}д╚д╧бв╝л╠└д╟д╩дд│╞╡м┬здм$X \to YZ$двдыддд╧$X \to \alpha$д╬д╔д┴дщдлд╟─ъ╡┴д╡дьды╩╕╦бд╬д│д╚дЄддджбг╟д░╒д╬╩╕╠о╝л═│╩╕╦бд╧е┴ечере╣енб╝╔╕╜р╖┴д╦╩╤┤╣д╟дндыбг$M[i,j,X]$дЄ╔Ї╩м╩╕╗·╬є$S[i,j]$дм╚є╜к├╝╡н╣ц$X$д╦дшдъ└╕└од╡дьдыд╚дн┐┐д╟двдые╓б╝еы┤╪┐Їд╚д╣дыбгд╣дыд╚$M[i,j,k] = \bigvee_{(X \to YX) \in G}{(\bigvee^j_{i=k}{M[i,k,Y] \cdot M[k+1,j,Z]})}$д╟двдыбгд│дьдЄ═╤ддд╞╞░┼к╖╫▓ш╦бд╦дшдъ╣╜╩╕▓Є└╧дм╣╘дидыбг
 
 \subsubsection{║╟╛о╜┼д▀╗░│╤╩м│ф}
 дшдпдядлдщд╩ддбг
@@ -491,5 +491,113 @@ $s$длдщ$t$д╪д╬║╟┬че╒еэб╝д╧╛яд╦$s$-$t$║╟╛оеле├е╚д╬╜┼д▀д╦┼∙д╖ддбг╗─═╛е╒еэб╝е░еще╒д
 
 \subsection{е▄епд╬└▀╖╫╩│└я╡нбзе╨б╝е│б╝е╔д╬д┐дсд╬е╞ене╣е╚░╡╜╠}
 д│д┴дщдт╞▒д╕дшджд╩╧├бг
+
+
+
+\section{╝ъд╦╔щдид╩дд╠ф┬ъд╚╢с╗ўевеые┤еъе║ер}
+╕·╬ид╬╬╔ддевеые┤еъе║ердмд╩ддд│д╚дЄ╛┌╠└д╣дыд│д╚д╦д─ддд╞д╬╛╧бгд╔д╬╠ф┬ъдм║д╞ёд╩д╬длд╚дддже╗еєе╣дЄ═▄джд│д╚дм╜┼═╫бг
+
+\subsection{╠ф┬ъд╚╡в├х}
+╠ф┬ъд╬║д╞ё└ндЄ╝ид╣д┐дсд╬┤Ё╦▄д╚д╩дыеведе╟егевд╧╡в├хд╟двдыбг
+
+\subsubsection{╕░д╚д╩дыеведе╟ев}
+╠ф┬ъ$A$дм╠ф┬ъ$B$дЄе╡е╓еыб╝е┴еєд╚д╖д╞═╤ддд╞▓Єд▒дыд╚днбв╠ф┬ъ$A$дм║д╞ёд╩дщд╨╠ф┬ъ$B$дт║д╞ёд╟двдыбг
+
+\subsubsection{╖ш─ъ╠ф┬ъ}
+┼·дидм┐┐д▐д┐д╧╡╢д╦╕┬дщдьды╠ф┬ъдЄ\textbf{╖ш─ъ╠ф┬ъ}д╚ддджбгд┐ддд╞ддд╬║╟┼м▓╜╠ф┬ъд╧╖ш─ъ╠ф┬ъд╚д╖д╞╔╜╕╜д╟дндыбгд┐д╚дид╨╜ф▓єе╗б╝еые╣е▐еє╠ф┬ъд╧б╓е│е╣е╚дм$k$░╩▓╝д╬е─евб╝дмдвдыдлб╫д╚╩╤┤╣д╟дндыбг
+
+\subsection{евеые┤еъе║ерд╬д┐дсд╬╡в├х}
+
+\subsubsection{║╟╢с└▄е┌ев}
+║╟╢с└▄е┌евд╧е╜б╝е╚дЄ═╤ддд╞▓Єд▒дыбгдтд╖║╟╢с└▄е┌евд╬║╟░н╖╫╗╗╬╠дм$O(n \log n)$д└д╚д╖д┐дщбвд│дьд╧е╜б╝е╚д╧$O(n \log n)$дшдъ┬одпд╟днд╩ддд╚ддджд│д╚дЄ░╒╠гд╣дыбг
+
+\subsubsection{║╟─╣┴¤▓├╔Ї╩м╬є}
+║╟─╣┴¤▓├╔Ї╩м╬є╠ф┬ъд╧╩╘╜╕╡ў╬ед╦╡в├хд╡дьдыд╚дддж╧├д╬╖лдъ╩╓д╖бг
+
+\subsubsection{║╟╛о╕°╟▄┐Ї}
+║╟╛о╕°╟▄┐Ї$lcm(x,y)$д╚║╟┬ч╕°╠є┐Ї$gcd(x,y)$д╦д─ддд╞$lcm(x,y)=xy/gcd(x,y)$д╚д╩дыбг
+
+\subsubsection{╞╠╩ё}
+е╜б╝е╚д╧╞╠╩ёдЄ═╤ддд╞▓Єдпд│д╚дмд╟дндыбге╜б╝е╚д╬╖╫╗╗╬╠д╬▓╝│жд╧$O(n \log n)$д╩д╬д╟бв╞╠╩ёдЄ╡сдсды╠ф┬ъд╬╖╫╗╗╬╠д╬▓╝│ждт$O(n \log n)$д╟двдыд╚дддидыбг
+
+\subsection{╜щ┼∙┼кд╩║д╞ё└нд╬╡в├х}
+
+\subsubsection{е╧е▀еые╚еє╩─╧й╠ф┬ъ}
+е╧е▀еые╚еє╩─╧й╠ф┬ъд╧╜ф▓єе╗б╝еые╣е▐еє╠ф┬ъд╦┤╩├▒д╦╡в├хд╟дндыбг
+
+\subsubsection{╞╚╬й╜╕╣ч╠ф┬ъд╚─║┼└╚я╩д╠ф┬ъ}
+е░еще╒├цд╬─║┼└д╬╜╕╣чдм╞╚╬йд╟двдыд╚д╧бвд╜д╬джд┴2д─д╬─║┼└дЄд─д╩д░╩╒дмд╩ддд╚ддджд│д╚д╟двдыбг─║┼└╚я╩д╠ф┬ъд╟╡сдсдыд┘дн─║┼└д╧бв─║┼└╜╕╣чдлдщ╞╚╬й╜╕╣ч╠ф┬ъд╟╡сдсд┐─║┼└дЄ░·ддд┐дтд╬д╟двдыбг
+
+╞╚╬й╜╕╣ч╠ф┬ъд╧бв░ь╚╠▓╜▒╟▓ш╗г▒╞е╣е▒е╕ехб╝еъеєе░╠ф┬ъд╚д╖д╞▓Єдпд│д╚дмд╟дндыбгд│д│д╟бве░еще╒д╬╩╒д╧2д─д╬▒╟▓ш╗г▒╞д╬е╣е▒е╕ехб╝еыдм╛╫╞═д╣дыд│д╚дЄ╔╜д╣бг
+
+\subsubsection{епеъб╝еп╠ф┬ъ}
+\textbf{епеъб╝еп}д╧┤░┴┤╔Ї╩ме░еще╒д╬д│д╚д╟бвд╔д╬─║┼└е┌евд╬┤╓д╦дт╩╒дмдвдыбг╞╚╬й╜╕╣ч╠ф┬ъд╧бв╩╒д╚╚є╩╒д╬╠Є│фдЄ╡╒┼╛д╣ды╩фе░еще╒▓╜д╖д┐е░еще╒дЄ═╤░╒д╖бвд╜дьд╦епеъб╝еп╠ф┬ъдЄ┼м═╤д╣дыд│д╚д╟▓Єдлдьдыбгдцдид╦епеъб╝еп╠ф┬ъд╧║д╞ёд╟двдыбг
+
+\subsection{╜╝┬н▓─╟╜└н╠ф┬ъ}
+└с╜╕╣ч$C=\{ \{ v_1, \overline{v_2} \}, \{ \overline{v_1},v_2 \} \}$д╧$v_1=true, v_2=false$д╬д╚дн┐┐д╚д╩дыбг░ь╩¤д╟$C=\{ \{ v_1, v_2 \}, \{ v_1, \overline{v_2} \},\{ \overline{v_1} \} \}$д╦д╧д╜д╬дшджд╩▓Єд╧д╩ддбгд│д╬дшджд╩╠ф┬ъдЄ\textbf{╜╝┬н▓─╟╜└н╠ф┬ъ}д╚ддджбгд│дьд╧║╟░нд╬╛ь╣чд╦┬┐╣р╗■┤╓д╬евеые┤еъе║ердм┬╕║▀д╖д╩ддд╚╣═дидщдьд╞дддыбг
+
+\subsubsection{3-╜╝┬н▓─╟╜└н╠ф┬ъ}
+└с╜╕╣ч$C$д╬│╞└сд╬еъе╞ещеы┐ЇдЄ3╕─д╦╕┬─ъд╖д┐╜╝┬н▓─╟╜└н╠ф┬ъдЄ\textbf{3-SAT}д╚ддджбг╟д░╒д╬╜╝┬н▓─╟╜└н╠ф┬ъд╧SATд╦╡в├хд╣дыд│д╚дмд╟дндыбг1-SATдф2-SATд╦д╧╕·╬и┼кд╩▓Є╩№дмдвдыдм3-SATд╦д╧д╩ддбг
+
+\subsection{┴╧┬д┼кд╩╡в├х}
+SATд╚3-SATд╟д╧3-SATд╬д█дждм╡в├хд╡д╗дфд╣ддбг
+
+\subsubsection{└░┐Ї╖╫▓ш╠ф┬ъ}
+╣■д▀╞■д├д┐╣═╗бд╦дшдъ3б▌SATд╧└░┐Ї╖╫▓ш╠ф┬ъдЄ▓Єдпд│д╚д╟▓Єдпд│д╚дмд╟дндыбг
+
+\subsubsection{─║┼└╚я╩д╠ф┬ъ}
+╣■д▀╞■д├д┐╣═╗бд╦дшдъ3б▌SATд╧─║┼└╚я╩д╠ф┬ъдЄ▓Єдпд│д╚д╟▓Єдпд│д╚дмд╟дндыбг
+
+\subsection{║д╞ё└н╛┌╠└д╬е│е─}
+дтд╚д╚д╩ды╠ф┬ъд╦д╧д╟днды╕┬дъ└й╕┬дЄд─д▒дыд│д╚бгTSPд╟д╧д╩дп═н╕■╩┐╠╠е░еще╒д╟│╞─║┼└д╬╝б┐Їдм3д╬е╧е▀еые╚еє╖╨╧йдЄ═╤дддыд╩д╔бгSATд╟д╧д╩дп3-SATдф╩┐╠╠3-╜╝┬н▓─╟╜└ндЄ═╤дддыд╩д╔бг╩┐╠╠3-SATд╟д╧└сдЄ─║┼└д╚д╖╞▒д╕еъе╞ещеыдЄ╩╒д╟╖ыдєд└е░еще╒д╟╩╒╞▒╗╬дм╕Є║▌д╖д╩дддшджд╦╩┐╠╠╛хд╦╔┴дпд│д╚дмд╟днбв┤Ў▓┐┼к╠ф┬ъд╬║д╞ё└нд╬╛┌╠└д╦═н═╤д╟двдыбг
+
+╠▄╔╕д╬╠ф┬ъд╧д╟дндыд└д▒╞ёд╖дддтд╬д╦д╣дыд│д╚бг
+
+дтд╚д╬╠ф┬ъд╬┴кд╙╩¤дЄ┤╓░удяд╩ддд│д╚бг3-SATбв└░┐Ї╩м│ф╠ф┬ъбв─║┼└╚я╩д╠ф┬ъбве╧е▀еые╚еє╖╨╧й╠ф┬ъдм░╖дддфд╣ддбг╠ф┬ъдме░еще╒╠ф┬ъд╟║д╞ё└ндм┴к┬Єдлдщ═шдыд╚дн─║┼└╚я╩д╠ф┬ъдЄ┴кд╙бв║д╞ё└ндм╜ч╜°длдщ═шдыд╚днд╧е╧е▀еые╚еє╖╨╧й╠ф┬ъдЄ┴кд╓бг
+
+╦╛д▐д╩ддд│д╚дЄд╖д┐д╚днд╬╖ы▓╠дЄ╕╖д╖дпд╣дыд│д╚б╩бйб╦бг
+
+б╓Aд▐д┐д╧Bдм┴кд╨дьдыдм╬╛╩¤дм┴кд╨дьд╩дддшджд╦д╣дыд│д╚д╧д╔джд╖д┐дщдддддлбйб╫д╩д╔╣═дидыд│д╚бг
+
+╣╘дн╡═д▐д├д┐д╚днд╧евеые┤еъе║ердЄ├╡д╣д│д╚бг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбз╗■╖╫д╚д╬║д╞ёд╩└ядд}
+║д╞ё└н╛┌╠└е▓б╝ердЄд╖д┐╧├бг
+
+\subsection{е▄епд╬└▀╖╫╩│└я╡нбзд╜д╬╕хд╬╝║╟╘}
+║д╞ё└н╛┌╠└е▓б╝ерд╦╝║╟╘д╖д┐╧├бг
+
+\subsection{P┬╨NP}
+\rm{P}┬╨NPд╦дкд▒ды╝ч═╫д╩╝┴╠фд╧бв╕б╛┌д╧╚п╕лдшдъ░╫д╖ддд╬длд╚ддджд│д╚д╟двдыбгд╣д╩дяд┴бв┼·дидм└╡д╖дддлд╔дждл─┤д┘дыд│д╚д╬д█дждм┼·дидЄ╕лд─д▒дыд│д╚дшдъ░╫д╖дддлд╚ддджд│д╚д╟двдыбг
+
+\subsubsection{епеще╣Pд╚епеще╣NP}
+епеще╣\textbf{P}д╚д╧┬┐╣р╝░╗■┤╓д╟▓Єд▒ды╠ф┬ъд╬╜╕╣чд╟двдыбгепеще╣\textbf{NP}д╚д╧┬┐╣р╝░╗■┤╓д╟╕б╛┌д╟днды╠ф┬ъд╬╜╕╣чд╟двдыбг╠└дщдлд╦$P \subseteq NP$д╟двдыдм$\rm{P} = \rm{NP}$д╟двдыдлд╧─ъдлд╟д╩ддбгд│дьдЄ\textbf{P┬╨NP╠ф┬ъ}д╚ддджбг
+
+\subsubsection{д╩д╝╜╝┬н▓─╟╜└н╠ф┬ъд╧д╣д┘д╞д╬║д╞ё╠ф┬ъд╬╩ьд╩д╬длбй}
+\textbf{епе├епд╬─ъ═¤}д╧бв╜╝┬н▓─╟╜└н╠ф┬ъдмPд╦╞■дыд│д╚дЄ╛┌╠└д╣дьд╨$\rm{P}=\rm{NP}$д╟двдыд╚╝ч─ед╣дыбг
+
+\subsubsection{NP║д╞ё ┬╨ NP┤░┴┤бй}
+двды╠ф┬ъдм\textbf{NP║д╞ё}д╟двдыд╚д╧бвд╜д╬╠ф┬ъдмNPд╬д╔д╬╠ф┬ъд╚дт╛пд╩дпд╚дт╞▒д╕дпдщддд╦║д╞ёд╩д╚дндЄ╕└джбгд╡дщд╦д╜д╬╠ф┬ъдмNPд╟двдыд╚дн\textbf{NP┤░┴┤}д╟двдыд╚╕└джбг
+
+\subsection{NP┤░┴┤╠ф┬ъд╪д╬┬╨╜ш}
+двды╠ф┬ъдмNP┤░┴┤д╟двдыд╚днбв┬╨╜ш╦бд╚д╖д╞д╧б╓╩┐╢╤д╬╛ь╣чд╦┬оддевеые┤еъе║ердЄ═╤дддыб╫б╓е╥ехб╝еъе╣е╞еге├епдЄ═╤дддыб╫б╓╢с╗ўевеые┤еъе║ердЄ═╤дддыб╫д╩д╔д╬╝ъ├╩дмдвдыбг╩г┐ЇдЄ╚цд┘дыд╚╬╔ддбг
+
+\subsubsection{─║┼└╚я╩дд╬╢с╗ў}
+╩╒дЄ╟д░╒д╦┴кд╙бв╬╛├╝дЄ─║┼└╚я╩дд╦▓├дибв╩╒дЄ║я╜№д╣дыбвд╚дддж╝ъ┬│дндЄ╖лдъ╩╓д╣д│д╚д╟║╟┼м╚я╩дд╬╣тб╣2╟▄д╬─║┼└╚я╩ддм╞└дщдьдыбгд│дьд╧║╟░нд╬╛ь╣чд╦е╥ехб╝еъе╣е╞еге├епдЄ═╤дддыдшдъд║д├д╚╬╔дд▓ЄдЄдтд┐дщд╣бг
+
+\subsubsection{ецб╝епеъе├е╔╜ф▓єе╗б╝еые╣е▐еє╠ф┬ъ}
+╗░│╤╔╘┼∙╝░дЄ╦■д┐д╣╜ф▓єе╗б╝еые╣е▐еє╠ф┬ъд╟д╧║╟┼ме─евб╝д╬2╟▄░╩╞тд╬▓ЄдЄ╞└дыд│д╚дмд╟днды╢с╗ўевеые┤еъе║ердмдвдыбг
+
+\subsubsection{║╟┬ч╚є╩─╧й╔Ї╩ме░еще╒}
+╩╒дЄбв║╕длдщ▒жд╪╕■длдж╜╕╣чд╚▒ждлдщ║╕д╪╕■длдж╜╕╣чд╦дяд▒дыбгд╣дыд╚бв┬чдндд╩¤д╬╜╕╣чд╧╚є╩─╧йд╟║╟┼м▓Єд╬╩╒д╬╛пд╩дпд╚дт╚╛╩мд╬╩╒дЄ┤▐дрбг
+
+\subsubsection{╜╕╣ч╚я╩д╠ф┬ъ}
+╜╕╣ч╚я╩д╠ф┬ъд╧║╟┼м▓Єд╬$\Theta (\lg n)$д╚д╩ды╢с╗ўевеые┤еъе║ердЄ╗¤д─бгд▐д└╚я╩дд╡дьд╞ддд╩дддтд╬дЄ┬┐дп┤▐др╔Ї╩м╜╕╣чдЄ▓├дид╞ддд▒д╨дшддбг
+
+
+
+\section{д╔д╬дшджд╦д╖д╞евеые┤еъе║ердЄ└▀╖╫д╣дыдл}
+евеые┤еъе║ерд╬└▀╖╫д╬║▌д╦│╬╟зд╣д┘дн╗Ў╣рдм┐Ї╜╜╖я╬є╡єд╡дьд╞дддыбг╔м═╫д╦д╩д├д┐дщ╗▓╛╚д╣дьд╨╬╔ддд└дэджбг
+
 
 \end{document}
